Format nutrition chapters

--- a/nutrition/chapter1.tex
+++ b/nutrition/chapter1.tex
@@ -1,83 +1,90 @@
 \chapter{Чыстыя прамежкі}
 
-Чысты прамежак – гэта поўная адсутнасьць калёрыяў любога кшталту паміж прыёмамі ежы, уключаючы падсілкаваньні, «вадкія» калёрыі (кава, гарбата, малако, сок) і да т. п. Здаровыя харчовыя паводзіны мяркуюць, што мы занятыя іншымі пытаньнямі ў прамежках паміж прыёмамі ежы: мы не перакусваем, не гаворым пра ежу, не чытаем рэцэпты і не глядзім кулінарныя шоў. Цяпер многія праблемы са здароўем і харчаваньнем узьнікаюць менавіта праз звычку пастаянна перакусваць, прычым многія людзі недаацэньваюць яе важкасьць.
+Чысты прамежак~--- гэта поўная адсутнасьць калёрыяў любога кшталту паміж прыёмамі ежы, уключаючы падсілкаваньні, «вадкія» калёрыі (кава, гарбата, малако, сок) і да т.~п. Здаровыя харчовыя паводзіны мяркуюць, што мы занятыя іншымі пытаньнямі ў~прамежках паміж прыёмамі ежы: мы не перакусваем, не гаворым пра ежу, не чытаем рэцэпты і не глядзім кулінарныя шоў. Цяпер многія праблемы са здароўем і харчаваньнем узьнікаюць менавіта праз звычку пастаянна перакусваць, прычым многія людзі недаацэньваюць яе важкасьць.
 
-Вядзеньне «дзёньніка перакусаў» дазволіць убачыць сотні й тысячы лішніх калёрыяў, неўзаметку зьедзеных за дзень. Многія перакусы ваш мозг і зусім не заўважае – вы ясьцё на аўтамаце. Апроч калёрыяў, для нас важны і ўплыў перакусаў на рэжым харчаваньня ды мэтабалізм. Уявіце сабе, што прыём ежы – гэта працэс мыцьця. Вы зьбіраеце розную бялізну, загружаеце яе ў пральную машыну, засыпаеце парашок і ўключаеце пэўную праграму. Калі вы забыліся памыць ручнік, дык не выключаеце пралку, выдзіраючы дзьверцы? Напраўду гэтак жа й зь ежай: пасьля яды ня варта ўмешвацца ў працу страўнікава-кішачнага тракту.
+Вядзеньне «дзёньніка перакусаў» дазволіць убачыць сотні й~тысячы лішніх калёрыяў, неўзаметку зьедзеных за дзень. Многія перакусы ваш мозг і зусім не заўважае~--- вы ясьцё на аўтамаце. Апроч калёрыяў, для нас важны і ўплыў перакусаў на рэжым харчаваньня ды мэтабалізм. Уявіце сабе, што прыём ежы~--- гэта працэс мыцьця. Вы зьбіраеце розную бялізну, загружаеце яе ў~пральную машыну, засыпаеце парашок і ўключаеце пэўную праграму. Калі вы забыліся памыць ручнік, дык не выключаеце пралку, выдзіраючы дзьверцы? Напраўду гэтак жа й~зь ежай: пасьля яды ня варта ўмешвацца ў~працу страўнікава-кішачнага тракту.
 
 \section{Як зьявілася праблема?}
-Традыцыйна прыём ежы быў строга рэгламэнтаваны, людзі елі за агульным сталом у вызначаны час. Нашы бабулі забаранялі «цягаць ежу», «псаваць апэтыт» і лічылі вельмі важным «апэтыт нагуляць» і «есьці за сталом». У шматлікіх краінах, напрыклад у Францыі, перакусы пад забаронай. На жаль, паступова гэтая культура харчаваньня разбураецца: так, да 72% жанчын у заходніх краінах перакусваюць. Структураванае харчаваньне (у арганізаваныя прыёмы ежы) замяняецца ежай на хаду, і гэта абумоўлівае зьяўленьне шматлікіх праблем са здароўем.
+
+Традыцыйна прыём ежы быў строга рэглямэнтаваны, людзі елі за агульным сталом у~вызначаны час. Нашы бабулі забаранялі «цягаць ежу», «псаваць апэтыт» і лічылі вельмі важным «апэтыт нагуляць» і «есьці за сталом». У~шматлікіх краінах, напрыклад у~Францыі, перакусы пад забаронай. На жаль, паступова гэтая культура харчаваньня разбураецца: так, да 72\,\% жанчын у~заходніх краінах перакусваюць. Структураванае харчаваньне (у арганізаваныя прыёмы ежы) замяняецца ежай на хаду, і гэта абумоўлівае зьяўленьне шматлікіх праблем са здароўем.
 
 \subsection{Раней людзі елі радзей.}
-З прычыны адсутнасьці лядоўняў і гатовых прадуктаў правіла чыстых прамежкаў выконвалася ў ранейшыя часы няўхільна, але сёньня нас увесь час атачае мноства ўжо гатовай да спажываньня ежы. Традыцыйна сталаваньне было рэглямэнтаванае ў розных культурах, прыступаць да яды можна было толькі за абедным сталом, выконваючы пэўныя рытуалы. Нават у поле работнікі бралі абрус і елі ў пэўны час. Перакусы, ежа на хаду, ежа ў адзіноце былі вельмі рэдкія. Дасьледнікі выявілі, што з 1950-х гадоў колькасьць прыёмаў ежы няўхільна ўзрастае.
+З прычыны адсутнасьці лядоўняў і гатовых прадуктаў правіла чыстых прамежкаў выконвалася ў~ранейшыя часы няўхільна, але сёньня нас увесь час атачае мноства ўжо гатовай да спажываньня ежы. Традыцыйна сталаваньне было рэглямэнтаванае ў~розных культурах, прыступаць да яды можна было толькі за абеднім сталом, выконваючы пэўныя рытуалы. Нават у~поле работнікі бралі абрус і елі ў~пэўны час. Перакусы, ежа на хаду, ежа ў~адзіноце былі вельмі рэдкія. Дасьледнікі выявілі, што з~1950-х гадоў колькасьць прыёмаў ежы няўхільна ўзрастае.
+
+\tipbox{Традыцыйна сталаваньне было рэглямэнтаванае ў~розных культурах, прыступаць да яды можна было толькі за абеднім сталом, выконваючы пэўныя рытуалы. Нават у~поле работнікі бралі абрус і елі ў~пэўны час.}
 
 \subsection{Цяпер людзі ядуць вельмі часта.}
-Сёньня мы назіраем эпідэмію перакусаў – людзі ядуць часта, на хаду, па-за спэцыяльнымі зонамі й часавымі правіламі. Прыём ежы стаў выпадковы і хаатычны. Гэта зьвязана са зьяўленьнем вялікай разнастайнасьці й паўсюднай даступнасьці гатовай ежы, з разбурэньнем традыцыйнай культуры харчаваньня, з агрэсіўнай рэклямай. Ежа паўсюль, дзе толькі магчыма, пачала, на жаль, успрымацца як норма. Чалавек стаў кіравацца ня голадам, а вонкавымі стымуламі. Немагчыма выбудаваць здаровыя харчовыя звычкі пры такім хаатычным харчаваньні! Мне хочацца, каб кожны зразумеў, што рэжым харчаваньня – гэта хрыбет вашай дыеты, безь яго немагчыма прытрымлівацца здаровых звычак у доўгатэрміновай пэрспэктыве!
+Сёньня мы назіраем эпідэмію перакусаў~--- людзі ядуць часта, на хаду, па-за спэцыяльнымі зонамі й~часавымі правіламі. Прыём ежы стаў выпадковы і хаатычны. Гэта зьвязана са зьяўленьнем вялікай разнастайнасьці й~паўсюднай даступнасьці гатовай ежы, з~разбурэньнем традыцыйнай культуры харчаваньня, з~агрэсіўнай рэклямай. Ежа паўсюль, дзе толькі магчыма, пачала, на жаль, успрымацца як норма. Чалавек стаў кіравацца ня голадам, а~вонкавымі стымуламі. Немагчыма выбудаваць здаровыя харчовыя звычкі пры такім хаатычным харчаваньні! Мне хочацца, каб кожны зразумеў, што рэжым харчаваньня~--- гэта хрыбет вашай дыеты, безь яго немагчыма прытрымлівацца здаровых звычак у~доўгатэрміновай пэрспэктыве!
 
 \section{Як гэта ўплывае на здароўе?}
 
-\subsection{Парушэньне мэтабалізму й працы гармонаў.}
-Перакусы зьмяншаюць узровень гармону грэліну, які адказвае за адчуваньне голаду, а гэта, у сваю чаргу, можа павялічваць трывогу й зьмяншаць узровень задаволенасьці. Калі ў страўнік трапляе нават адносна невялікая колькасьць ежы, адразу пачынаецца выдзяленьне стрававальных фэрмэнтаў, выпрацоўка інсуліну, зьніжэньне ўзроўню грэліну. Гэтыя ваганьні, якія паўтараюцца шматкроць на працягу дня, могуць мець неспрыяльны эфэкт у выглядзе зьніжэньня адчувальнасьці да гармонаў (рэзыстэнтнасьць), што шкодна для здароўя. Асабліва шкодныя парушэньні выпрацоўкі гармону лептыну, які разам з грэлінам зьяўляецца галоўным рэгулятарам апэтыту. Перакусы правакуюць ваганьні глюкозы ў крыві («цукровыя арэлі»). Напэўна, вы заўважалі, што нават маленькі кавалачак ежы на тле сытасьці можа абудзіць пачуцьцё голаду.
+\subsection{Парушэньне мэтабалізму й~працы гармонаў.}
+Перакусы зьмяншаюць узровень гармону грэліну, які адказвае за адчуваньне голаду, а~гэта, у~сваю чаргу, можа павялічваць трывогу й~зьмяншаць узровень задаволенасьці. Калі ў~страўнік трапляе нават адносна невялікая колькасьць ежы, адразу пачынаецца выдзяленьне стрававальных фэрмэнтаў, выпрацоўка інсуліну, зьніжэньне ўзроўню грэліну. Гэтыя ваганьні, якія паўтараюцца шматкроць на працягу дня, могуць мець неспрыяльны эфэкт у~выглядзе зьніжэньня адчувальнасьці да гармонаў (рэзыстэнтнасьць), што шкодна для здароўя. Асабліва шкодныя парушэньні выпрацоўкі гармону лептыну, які разам з~грэлінам зьяўляецца галоўным рэгулятарам апэтыту. Перакусы правакуюць ваганьні глюкозы ў~крыві («цукровыя арэлі»). Напэўна, вы заўважалі, што нават маленькі кавалачак ежы на тле сытасьці можа абудзіць пачуцьцё голаду.
 
-\subsection{Пераяданьне}
-Адзін з пабочных эфэктаў перакусаў – гэта незаўважнае ўжываньне вялікай колькасьці калёрыяў па-за прыёмамі ежы. Прадукты для перакусаў часьцей за ўсё маюць высокую колькасьць калёрыяў і валодаюць здольнасьцю ўзмацняць апэтыт. Выпадкова пад“едзены кавалачак на працы, у стрэсе, з гарбатай – усё гэта ператвараецца ў незаўважнае для нас, але выяўнае пераяданьне. Яно шкодзіць здароўю, нават калі пакуль не адбіваецца на выглядзе цела, бо самы небясьпечны тлушч не падскурны, а нутравы (вісцэральны). Ежа на хаду, за стырном, падчас тэлефоннай размовы таксама зьніжае ўзровень насычэньня й вядзе да залішняга спажываньня ежы. Перакусы шкодныя й людзям без атлусьценьня. Так, навукоўцы высьветлі, што й людзі з нармальнай вагой палепшаць сваё здароўе, адмовіўшыся ад 200-300 ккал на дзень. А дзеці часам зьядаюць падчас перакусаў больш, чым у асноўныя прыёмы ежы, і бацькі дзівяцца адсутнасьці ў іх апэтыту. Адмоўцеся ад перакусаў – і вы вернеце сабе апэтыт!
+\subsection{Пераяданьне.}
+Адзін з~пабочных эфэктаў перакусаў~--- гэта незаўважнае ўжываньне вялікай колькасьці калёрыяў па-за прыёмамі ежы. Прадукты для перакусаў часьцей за ўсё маюць высокую колькасьць калёрыяў і валодаюць здольнасьцю ўзмацняць апэтыт. Выпадкова пад'едзены кавалачак на працы, у~стрэсе, з~гарбатай~--- усё гэта ператвараецца ў~незаўважнае для нас, але выяўнае пераяданьне. Яно шкодзіць здароўю, нават калі пакуль не адбіваецца на выглядзе цела, бо самы небясьпечны тлушч не падскурны, а~нутравы (вісцэральны). Ежа на хаду, за стырном, падчас тэлефоннай размовы таксама зьніжае ўзровень насычэньня й~вядзе да залішняга спажываньня ежы. Перакусы шкодныя й~людзям без атлусьценьня. Так, навукоўцы высьветлі, што й~людзі з~нармальнай вагой палепшаць сваё здароўе, адмовіўшыся ад 200--300\,ккал на дзень, а~дзеці часам зьядаюць падчас перакусаў больш, чым у~асноўныя прыёмы ежы, і бацькі дзівяцца адсутнасьці ў~іх апэтыту. Адмоўцеся ад перакусаў~--- і вы вернеце сабе апэтыт!
 
 \subsection{Парушэньне харчовага рэжыму і харчовых паводзінаў.}
-Чым болей перакусаў, тым меней карыснай ежы вы зьясьцё ў асноўныя прыёмы ежы. Фармуецца заганнае кола: перакусваючы, вы менш зьядаеце ў асноўны прыём ежы і зноў хочаце есьці. Гэта парушае нармальныя харчовыя паводзіны й закладае нездаровыя звычкі. Я бачу, як людзі зьвяртаюцца да перакусаў для ўзьняцьця настрою пры стрэсе: такая звычка можа прывесьці да парушэньня нармальнай працы мозгу й павялічыць рызыку дэпрэсіі.
+Чым болей перакусаў, тым меней карыснай ежы вы зьясьцё ў~асноўныя прыёмы ежы. Фармуецца заганнае кола: перакусваючы, вы менш зьядаеце ў~асноўны прыём ежы і зноў хочаце есьці. Гэта парушае нармальныя харчовыя паводзіны й~закладае нездаровыя звычкі. Я~бачу, як людзі зьвяртаюцца да перакусаў для ўзьняцьця настрою пры стрэсе: такая звычка можа прывесьці да парушэньня нармальнай працы мозгу й~павялічыць рызыку дэпрэсіі.
+
+\tipbox{Дзеці часам зьядаюць падчас перакусаў больш, чым у~асноўныя прыёмы ежы, і бацькі дзівяцца адсутнасьці ў~іх апэтыту. Адмоўцеся ад перакусаў~--- і вы вернеце сабе апэтыт!}
 
 \subsection{Іншыя прычыны.}
-Пэрыядычныя, альбо хаатычныя, перакусы павялічваюць рызыку для здароўя, а вось іх перавагі для здароўя маюць слабую навуковую базу. Перакусы павялічваюць рызыку захворваньняў печані, такіх як тлушчавая дыстрафія печані. Зьніжаецца інтэнсіўнасьць клеткавага аднаўленьня і самаачышчэньня – аўтафагіі. Акрамя таго, павелічэньне частаты харчаваньня ўзмацняе нагрузку на печань і ўзровень кіслотнай нагрузкі на зубы. На жаль, мы бачым актыўную прапаганду перакусаў у дыеталёгіі, што ня йдзе на карысьць здароўю. Актыўную прапаганду перакусаў вядуць і вытворцы розных батончыкаў ды гатовых прадуктаў.
+Пэрыядычныя, альбо хаатычныя, перакусы павялічваюць рызыку для здароўя, а~вось іх перавагі для здароўя маюць слабую навуковую базу. Перакусы павялічваюць рызыку захворваньняў печані, такіх як тлушчавая дыстрафія печані. Зьніжаецца інтэнсіўнасьць клеткавага аднаўленьня і самаачышчэньня~--- аўтафагіі. Акрамя таго, павелічэньне частаты харчаваньня ўзмацняе нагрузку на печань і ўзровень кіслотнай нагрузкі на зубы. На жаль, мы бачым актыўную прапаганду перакусаў у~дыеталёгіі, што ня йдзе на карысьць здароўю. Актыўную прапаганду перакусаў вядуць і вытворцы розных батончыкаў ды гатовых прадуктаў.
 
 \section{Асноўныя прынцыпы}
 
 \subsection{Датрымлівайцеся чыстых прамежкаў паміж прыёмамі ежы.}
-Важным правілам здаровага рэжыму харчаваньня зьяўляецца пільнаваньне бескалярыйных інтэрвалаў паміж прыёмамі ежы. Памятайце, што магія адбываецца не тады, калі вы ясьцё, а тады, калі не ясьцё! Скасуйце паступленьне калёрыяў у любым выглядзе, у тым ліку з напоямі.
 
-Важна разумець, што нават невялікая колькасьць калёрыяў у выглядзе перакусаў – гэта ня проста мэханічны дадатак да сумы зьедзенага, а, па сутнасьці, дадатковы прыём ежы, запуск усяго працэсу страваваньня (выдзяленьне фэрмэнтаў, зьмяненьне маторыкі кішачніка, выдзяленьне кішачных і мэтабалічных гармонаў). Датрыманьне правіла чыстых прамежкаў – гэта падмурак здаровых харчовых паводзінаў, умацаваньне самадысцыпліны й паляпшэньня мэтабалізму.
+Важным правілам здаровага рэжыму харчаваньня зьяўляецца пільнаваньне бескалярыйных інтэрвалаў паміж прыёмамі ежы. Памятайце, што магія адбываецца не тады, калі вы ясьцё, а~тады, калі не ясьцё! Скасуйце паступленьне калёрыяў у~любым выглядзе, у~тым ліку з~напоямі.
 
-\subsection{Сэнсарная стымуляцыя (выгляд і пах ежы, размовы пра ежу і г.д.).}
-Навукова даведзена, што пах і выгляд ежы могуць уплываць на выдзяленьне інсуліну. Таму найболей камфортнай для працы будзе асяродак без харчовых стымулаў. Не працуйце за абедзенным сталом і не абедайце за працоўным.
+Важна разумець, што нават невялікая колькасьць калёрыяў у~выглядзе перакусаў~--- гэта ня проста мэханічны дадатак да сумы зьедзенага, а, па сутнасьці, дадатковы прыём ежы, запуск усяго працэсу страваваньня (выдзяленьне фэрмэнтаў, зьмяненьне маторыкі кішачніка, выдзяленьне кішачных і мэтабалічных гармонаў). Датрыманьне правіла чыстых прамежкаў~--- гэта падмурак здаровых харчовых паводзінаў, умацаваньне самадысцыпліны й~паляпшэньня мэтабалізму.
+
+\subsection{Сэнсарная стымуляцыя} (выгляд і пах ежы, размовы пра ежу і г.~д.). Навукова даведзена, што пах і выгляд ежы могуць уплываць на выдзяленьне інсуліну. Таму найболей камфортнай для працы будзе асяродак без харчовых стымулаў. Не працуйце за абедзенным сталом і не абедайце за працоўным.
 
 \subsection{Толькі вада.}
-Падчас пустых інтэрвалаў дапушчальна піць толькі негазаваную ваду. У рэдкіх выключэньнях – некалярыйныя напоі без кафеіну, зёлкі, гарбату каркадэ, газаваную ваду, але лепш абысьціся бязь іх. Гарбату й каву варта піць безь вяршкоў, цукру, цукразаменьнікаў і, вядома ж, дэсэрту. Пажадана абысьціся й бяз жуйкі.
+
+Падчас пустых інтэрвалаў дапушчальна піць толькі негазаваную ваду. У~рэдкіх выключэньнях~--- некалярыйныя напоі без кафеіну, зёлкі, гарбату каркадэ, газаваную ваду, але лепш абысьціся бязь іх. Гарбату й~каву варта піць безь вяршкоў, цукру, цукразаменьнікаў і, вядома ж, дэсэрту. Пажадана абысьціся й~бяз жуйкі.
 
 \section{Як трымацца правіла? Ідэі ды парады}
 
 \subsection{Рэжым харчаваньня.}
-Памятайце, што рэжым – перадусім. Рэжым харчаваньня – гэта лад, структура харчаваньня, самае галоўнае ў паляпшэньні вашага здароўя. Генэтычна мы схільныя кантраляваць доступ ежы не абмежаваньнем калёрыяў, а абмежаваньнем часу доступу да яе. Паступова зь цягам часу такі рэжым харчаваньня стане звычкай, якая будзе апірышчам, хрыбтом вашага харчаваньня.
 
-\subsection{Устрыманасьць – гэта прыкмета годнасьці.}
-Бо калі вы захацелі ў прыбіральню, вы ж не здавальняеце свой позыў проста на вуліцы. Чаму павінна быць інакш зь ежай? Стаўцеся да чыстых прамежкаў як да трэніроўкі сваёй умеранасьці й праявы дысцыпліны. Гартуйце свой дух.
+Памятайце, што рэжым~--- перадусім. Рэжым харчаваньня~--- гэта лад, структура харчаваньня, самае галоўнае ў~паляпшэньні вашага здароўя. Генэтычна мы схільныя кантраляваць доступ ежы не абмежаваньнем калёрыяў, а~абмежаваньнем часу доступу да яе. Паступова зь цягам часу такі рэжым харчаваньня стане звычкай, якая будзе апірышчам, хрыбтом вашага харчаваньня.
 
-\subsection{Зьмяніце харчовы асяродак.}
-Вядома, ставіць замкі на лядоўню неабавязкова, але ня варта правакаваць сябе лішні раз. Калі вы зьбіраецеся есьці прысмакі, дык рабіце гэта ў асноўны прыём ежы, а ня ў чысты прамежак. Наша сіла волі абмежаваная, ня трэба дазваляць ежы зьнясільваць яе.
+\subsection{Устрыманасьць~--- гэта прыкмета годнасьці.}
+Бо калі вы захацелі ў~прыбіральню, вы ж не здавальняеце свой позыў проста на вуліцы. Чаму павінна быць інакш зь ежай? Стаўцеся да чыстых прамежкаў як да трэніроўкі сваёй умеранасьці й~праявы дысцыпліны. Гартуйце свой дух.
 
-\subsection{Не таргуйцеся з сабой.}
-Ня варта абмяркоўваць забароны ці таргавацца з сабой. Пераключыце ўвагу на свае штодзённыя клопаты, а пра ежу думайце падчас ежы. Мы заўсёды схільныя паддавацца харчовым спакусам, калі адсутнічае правіла «ня есьці».
+\subsection{Зьмяніце харчовы асяродак.} 
+Вядома, ставіць замкі на лядоўню неабавязкова, але ня варта правакаваць сябе лішні раз. Калі вы зьбіраецеся есьці прысмакі, дык рабіце гэта ў~асноўны прыём ежы, а~ня ў~чысты прамежак. Наша сіла волі абмежаваная, ня трэба дазваляць ежы зьнясільваць яе.
 
-Чым мацней вы гоніце думкі пра ежу, тым часьцей яны прыходзяць. Паспрабуйце пажартаваць зь сябе й пасьмяяцца са спакусы. Гэта сапраўды сьмешна, бо вы – дарослы чалавек, які пакутуе праз кавалак смажанага цеста з тлушчам!
+\subsection{Не таргуйцеся з~сабой.} 
+Ня варта абмяркоўваць забароны ці таргавацца з~сабой. Пераключыце ўвагу на свае штодзённыя клопаты, а~пра ежу думайце падчас ежы. Мы заўсёды схільныя паддавацца харчовым спакусам, калі адсутнічае правіла «ня есьці».
+
+\tipbox{Чым мацней вы гоніце думкі пра ежу, тым часьцей яны прыходзяць. Паспрабуйце пажартаваць зь сябе й~пасьмяяцца са спакусы. Гэта сапраўды сьмешна, бо вы~--- дарослы чалавек, які пакутуе праз кавалак смажанага цеста з~тлушчам!}
 
 \subsection{Неадчэпныя думкі пра ежу.}
-Чым мацней вы гоніце думкі пра ежу, тым часьцей яны прыходзяць. Пераключайце ўвагу: прайдзіцеся, папрысядайце. Паспрабуйце давесьці думкі да абсурду (думкі пра пончык: супэргерой чалавек-пончык, машына-пончык, колькі пончыкаў я зьем, пакуль мяне не парве, і г.д.). Пажартуйце зь сябе і пасьмейцеся са спакусы. Ня сьмешна? Але ж вы дарослы чалавек, які пакутуе ад кавалка смажанага цеста з тлушчам! Гэта сапраўды сьмешна.
+Чым мацней вы гоніце думкі пра ежу, тым часьцей яны прыходзяць. Пераключайце ўвагу: прайдзіцеся, папрысядайце. Паспрабуйце давесьці думкі да абсурду (думкі пра пончык: супэргерой чалавек-пончык, машына-пончык, колькі пончыкаў я зьем, пакуль мяне не парве, і г.~д.). Пажартуйце зь сябе і пасьмейцеся са спакусы. Ня сьмешна? Але ж вы дарослы чалавек, які пакутуе ад кавалка смажанага цеста з~тлушчам! Гэта сапраўды сьмешна.
 
 \subsection{Не глядзіце фуд-порна.}
-Пад тэрмінам «фуд-порна» разумеюць узбуджальныя выявы ежы ў сацсетках, часопісах і на сайтах. Устрымлівайцеся ад разгляданьня карцінак з такой ежай, абмеркаваньня рэцэптаў, прагляду кулінарных перадач. Ежа – гэта толькі частка жыцьця, ня трэба запаўняць ёю больш часу, чым неабходна. Навукова даведзена, што разгляд выяваў ежы можа выклікаць голад і жаданьне есьці ў абсалютна сытага чалавека.
+Пад тэрмінам «фуд-порна» разумеюць узбуджальныя выявы ежы ў~сацсетках, часопісах і на сайтах. Устрымлівайцеся ад разгляданьня карцінак з~такой ежай, абмеркаваньня рэцэптаў, прагляду кулінарных перадач. Ежа~--- гэта толькі частка жыцьця, ня трэба запаўняць ёю больш часу, чым неабходна. Навукова даведзена, што разгляд выяваў ежы можа выклікаць голад і жаданьне есьці ў~абсалютна сытага чалавека.
 
-Ежце толькі за абедзенным сталом, а не на хаду ці за ноўтбукам. Апошняе небясьпечнае выпрацоўкай умоўнага рэфлексу, калі адно выгляд ноўтбука будзе наганяць апэтыт.
+\tipbox{Ежце толькі за абедзенным сталом, а~не на хаду ці за ноўтбукам. Апошняе небясьпечнае выпрацоўкай умоўнага рэфлексу, калі адно выгляд ноўтбука будзе наганяць апэтыт.}
 
-\subsection{Не забараняйце, а ўводзьце правілы.}
-Не факусуйцеся на тым, што вам забаронена або нельга. Бо забароны могуць узмацняць цягу да ежы. Стварэньне свайго рэжыму харчаваньня – гэта не забароны, а правілы харчаваньня. Вы можаце зьесьці тое, што хочаце, але зрабіце гэта ў наступны прыём ежы. Забаронаў няма, ды ёсьць дакладныя правілы. Структуруйце і парадкуйце сваё сілкаваньне, а не забараняйце сабе ўсё запар!
+\subsection{Не забараняйце, а~ўводзьце правілы.}
+Не факусуйцеся на тым, што вам забаронена або нельга. Бо забароны могуць узмацняць цягу да ежы. Стварэньне свайго рэжыму харчаваньня~--- гэта не забароны, а~правілы харчаваньня. Вы можаце зьесьці тое, што хочаце, але зрабіце гэта ў~наступны прыём ежы. Забаронаў няма, ды ёсьць дакладныя правілы. Структуруйце і парадкуйце сваё сілкаваньне, а~не забараняйце сабе ўсё запар!
 
 \subsection{Стварайце пазытыўныя харчовыя звычкі.}
-Ежце толькі за абедзенным сталом, а не на хаду ці за ноўтбукам. Апошняе небясьпечнае выпрацоўкай умоўнага рэфлексу, калі адно выгляд ноўтбука будзе наганяць апэтыт. Выразна вызначыце абедзеннае месца, упрыгожце стол абрусам – гэта створыць настрой.
+Ежце толькі за абедзенным сталом, а~не на хаду ці за ноўтбукам. Апошняе небясьпечнае выпрацоўкай умоўнага рэфлексу, калі адно выгляд ноўтбука будзе наганяць апэтыт. Выразна вызначыце абедзеннае месца, упрыгожце стол абрусам~--- гэта створыць настрой.
 
-\subsection{Апэтыт – гэта добра.}
-Нармальны апэтыт – прыкмета здароўя. За некалькі гадзінаў устрыманьня ад ежы вы не сапсуяце сабе кіслатой страўнік, не запаволіце мэтабалізм і не зьясьцё ўдвая болей пасьля. Гэта міты, шмат якія зь іх мы разьбяром па ходзе кнігі.
+\subsection{Апэтыт~--- гэта добра.}
+Нармальны апэтыт~--- прыкмета здароўя. За некалькі гадзінаў устрыманьня ад ежы вы не сапсуяце сабе кіслатой страўнік, не запаволіце мэтабалізм і не зьясьцё ўдвая болей пасьля. Гэта міты, шмат якія зь іх мы разьбяром па ходзе кнігі.
 
 \subsection{Перабіце цягу.}
-Калі вам складана кантраляваць апэтыт, дапамогуць інтэнсіўныя смакі – кіслы або востры. Запараныя вострыя прыправы (карыца, бадзян, кардамон) або каркадэ карысныя для здароўя, практычна ня ўтрымліваюць калёрыяў і дапамагаюць кантраляваць апэтыт.
+Калі вам складана кантраляваць апэтыт, дапамогуць інтэнсіўныя смакі~--- кіслы або востры. Запараныя вострыя прыправы (карыца, бадзян, кардамон) або каркадэ карысныя для здароўя, практычна ня ўтрымліваюць калёрыяў і дапамагаюць кантраляваць апэтыт.
 
 \subsection{Найменей шкодны перакус.}
-Калі ўжо сытуацыя такая невыносная, што конча трэба перакусіць, то ўстрымайцеся ад мучных, салодкіх прадуктаў з высокай глікемічнай нагрузкай, альбо індэксам, аддайце перавагу сырой расьліннай ежы ці тлушчам. Гэта могуць быць сырыя арэхі, сырая гародніна, якую можна пагрызьці (морква, салера, перац), або зялёная салата. Таксама можна дадаць у гарбату ці ўжыць асобна лыжку масла ці алею – сьметанковага, какосавага, аліўкавага, – тлушчы эфэктыўна сьцішваюць цягу да салодкага.
+Калі ўжо сытуацыя такая невыносная, што конча трэба перакусіць, то ўстрымайцеся ад мучных, салодкіх прадуктаў з~высокай глікемічнай нагрузкай, альбо індэксам, аддайце перавагу сырой расьліннай ежы ці тлушчам. Гэта могуць быць сырыя арэхі, сырая гародніна, якую можна пагрызьці (морква, салера, перац), або зялёная салата. Таксама можна дадаць у~гарбату ці ўжыць асобна лыжку масла ці алею~--- сьметанковага, какосавага, аліўкавага,~--- тлушчы эфэктыўна сьцішваюць цягу да салодкага.
 
 \subsection{Звычкі будуць вас падводзіць, але не хвалюйцеся.}
-Спачатку можа быць складана, магчымыя зрывы нават аўтаматычныя, калі вы задумаліся аб нечым і апрытомнелі ўжо зь ежай у руках. Гэта вынік вашых доўгатэрміновых звычак і сумневаў. Калі вы перакусвалі ў машыне, то мозг будзе прапанаваць зрабіць вам гэта зноў. Не падмацоўвайце звычкі – і яны счэзнуць.
+Спачатку можа быць складана, магчымыя зрывы нават аўтаматычныя, калі вы задумаліся аб нечым і апрытомнелі ўжо зь ежай у~руках. Гэта вынік вашых доўгатэрміновых звычак і сумневаў. Калі вы перакусвалі ў~машыне, то мозг будзе прапанаваць зрабіць вам гэта зноў. Не падмацоўвайце звычкі~--- і яны счэзнуць.
