--- a/nutrition/chapter13.tex
+++ b/nutrition/chapter13.tex
@@ -1,91 +1,92 @@
 \chapter{Цэльныя прадукты}
 
-Правіла цэльных прадуктаў заключаецца ў тым, каб пераважна купляць і есьці тое, што вырасла само, а не зьяўляецца камбінацыяй з парашкападобных сумесяў і дабавак (харчовыя рэчывы). Гэтае правіла вельмі простае, але зьяўляецца базавым у выбары прадуктаў. Значная колькасьць нашых праблемаў са здароўем і самаадчуваньнем зьвязаная з тым, што мы ямо мала «сапраўднай ежы», аддаём перавагу імітацыям прадуктаў і харчовым рэчывам. Вельмі часта людзі трапляюць у маркетынгавую пастку «палепшанай ежы»: тварагу бяз тлушчу, сьвежавыціснутага соку бязь мякаці, «палепшаных» расьлінных алеяў. Я часам бачу, што людзі з розных прычынаў зусім пазьбягаюць есьці цэльную ежу: яны ядуць толькі перапрацаваную, прычым вельмі глыбока. Гэта і шматкі, гатовыя замарожаныя паўфабрыкаты, мучныя вырабы. Вядома, няма нічога небясьпечнага ў тым, каб часам зьесьці й гатовую ежу, але, калі яна пачынае складаць большую частку рацыёну, могуць узьнікнуць праблемы са здароўем.
+Правіла цэльных прадуктаў заключаецца ў~тым, каб пераважна купляць і есьці тое, што вырасла само, а~не зьяўляецца камбінацыяй з~парашкападобных сумесяў і дабавак (харчовыя рэчывы). Гэтае правіла вельмі простае, але зьяўляецца базавым у~выбары прадуктаў. Значная колькасьць нашых праблемаў са здароўем і самаадчуваньнем зьвязаная з~тым, што мы ямо мала «сапраўднай ежы», аддаём перавагу імітацыям прадуктаў і харчовым рэчывам. Вельмі часта людзі трапляюць у~маркетынгавую пастку «палепшанай ежы»: тварагу бяз тлушчу, сьвежавыціснутага соку бязь мякаці, «палепшаных» расьлінных алеяў. Я часам бачу, што людзі з~розных прычынаў зусім пазьбягаюць есьці цэльную ежу: яны ядуць толькі перапрацаваную, прычым вельмі глыбока. Гэта і шматкі, гатовыя замарожаныя паўфабрыкаты, мучныя вырабы. Вядома, няма нічога небясьпечнага ў~тым, каб часам зьесьці й~гатовую ежу, але, калі яна пачынае складаць большую частку рацыёну, могуць узьнікнуць праблемы са здароўем.
 
-Значная колькасьць нашых праблемаў са здароўем і самаадчуваньнем зьвязаная з тым, што мы ямо мала «сапраўднай», цэльнай ежы, аддаём перавагу імітацыям прадуктаў і харчовым рэчывам. Вельмі часта людзі трапляюць у маркетынгавую пастку «палепшанай ежы»: тварагу бяз тлушчу, сьвежавыціснутага соку бязь мякаці, «палепшаных» расьлінных алеяў.
+\tipbox{Значная колькасьць нашых праблемаў са здароўем і самаадчуваньнем зьвязаная з~тым, што мы ямо мала «сапраўднай», цэльнай ежы, аддаём перавагу імітацыям прадуктаў і харчовым рэчывам. Вельмі часта людзі трапляюць у~маркетынгавую пастку «палепшанай ежы»: тварагу бяз тлушчу, сьвежавыціснутага соку бязь мякаці, «палепшаных» расьлінных алеяў.}
 
-Сапраўдная ежа – гэта расьліны і жывёлы, якія існуюць у сьвеце вакол нас, прыгатаваныя з умеранай і зберагалай апрацоўкай (цэльныя прадукты): рыба, грэцкі арэх, буракі, чарніцы.
+Сапраўдная ежа~--- гэта расьліны і жывёлы, якія існуюць у~сьвеце вакол нас, прыгатаваныя з~умеранай і зберагалай апрацоўкай (цэльныя прадукты): рыба, грэцкі арэх, буракі, чарніцы.
 
-Харчовыя рэчывы – гэта натуральныя або штучныя (розьніцы няма) субстанцыі, што зазвычай маюць кшталт парашкоў, вадкасьцяў, алеяў, высокай ступені прамысловай перапрацоўкі, звычайна высокаачышчаныя і высокаканцэнтраваныя. Прыклады: цукар, соль, мука, яечны бялок, арахісавы парашок, соевы пратэін, сухое малако, сурымі, сухі бульбяны крухмал, солад і інш. Паасобку вы наўрад ці зможаце зьесьці шмат кожнага з гэтых кампанэнтаў, але, зьмяшаныя разам у пэўных прапорцыях , яны могуць узламаць вашу сыстэму насычэньня й мэтабалізм і стымуляваць пераяданьне.
+Харчовыя рэчывы~--- гэта натуральныя або штучныя (розьніцы няма) субстанцыі, што зазвычай маюць кшталт парашкоў, вадкасьцяў, алеяў, высокай ступені прамысловай перапрацоўкі, звычайна высокаачышчаныя і высокаканцэнтраваныя. Прыклады: цукар, соль, мука, яечны бялок, арахісавы парашок, соевы пратэін, сухое малако, сурымі, сухі бульбяны крухмал, солад і інш. Паасобку вы наўрад ці зможаце зьесьці шмат кожнага з~гэтых кампанэнтаў, але, зьмяшаныя разам у~пэўных прапорцыях, яны могуць узламаць вашу сыстэму насычэньня й~мэтабалізм і стымуляваць пераяданьне.
 
 \section{Як зьявілася праблема?}
 
-Склад цэльных прадуктаў утварыўся паступова, пры працяглым эвалюцыйным узаемадзеяньні расьлінаў і жывёлаў. Нашыя целы аптымальна прыстасаваныя ўзаемадзейнічаць з цэльнай ежай, таму прадукты – гэта больш чым мэханічная сума асобных нутрыентаў, гэта яшчэ іх складаная арганізацыя і велізарная колькасьць біялягічна актыўных рэчываў, якія немагчыма сабраць цалкам на заводзе. У працэсе эвалюцыі разьвіцьцё жывёльнага і расьліннага сьветаў ішло ўзаемазьвязана. І мы зьвязаныя з расьлінамі й жывёламі тысячамі сувязяў і маем нашмат больш агульнага, чым нам здаецца.
+Склад цэльных прадуктаў утварыўся паступова, пры працяглым эвалюцыйным узаемадзеяньні расьлінаў і жывёлаў. Нашыя целы аптымальна прыстасаваныя ўзаемадзейнічаць з~цэльнай ежай, таму прадукты~--- гэта больш чым мэханічная сума асобных нутрыентаў, гэта яшчэ іх складаная арганізацыя і велізарная колькасьць біялягічна актыўных рэчываў, якія немагчыма сабраць цалкам на заводзе. У~працэсе эвалюцыі разьвіцьцё жывёльнага і расьліннага сьветаў ішло ўзаемазьвязана. І~мы зьвязаныя з~расьлінамі й~жывёламі тысячамі сувязяў і маем нашмат больш агульнага, чым нам здаецца.
 
-Наш абмен рэчываў і стрававальная сыстэма адаптаваныя да пэўных прадуктаў, разам зь якімі адбывалася наша эвалюцыя. Менавіта таму цела чалавека генэтычна адаптаванае для спажываньня сапраўднай ежы, а не высокаачышчаных рэчываў. Сёньня мы ямо занадта шмат прадуктаў, вырабленых з харчовых рэчываў: мучныя вырабы, піца, дэсэрты, хлеб, сасіскі, газіроўка, супы хуткага прыгатаваньня, кансэрвы і інш.
+Наш абмен рэчываў і стрававальная сыстэма адаптаваныя да пэўных прадуктаў, разам зь якімі адбывалася наша эвалюцыя. Менавіта таму цела чалавека генэтычна адаптаванае для спажываньня сапраўднай ежы, а~не высокаачышчаных рэчываў. Сёньня мы ямо занадта шмат прадуктаў, вырабленых з~харчовых рэчываў: мучныя вырабы, піца, дэсерты, хлеб, сасіскі, газіроўка, супы хуткага прыгатаваньня, кансэрвы і інш.
 
 \subsection{Імітацыя сапраўдных прадуктаў.}
-Імітацыя сапраўднай ежы – гэта не сапраўдная ежа, хоць і вельмі да яе падобная. Яна зробленая шляхам камбінаваньня вычышчаных харчовых рэчываў. Напрыклад, хлеб зь вялікай колькасьцю цукру і солі, штучна зроблены сыр ці ёгурт з сухога малака з высокай канцэнтрацыяй цукру і сыр натуральнага высьпяваньня з бактэрыямі, сапраўднае сьметанковае масла ці спрэд на аснове транстлушчаў.
+Імітацыя сапраўднай ежы~--- гэта не сапраўдная ежа, хоць і вельмі да яе падобная. Яна зробленая шляхам камбінаваньня вычышчаных харчовых рэчываў. Напрыклад, хлеб зь вялікай колькасьцю цукру і солі, штучна зроблены сыр ці ёгурт з~сухога малака з~высокай канцэнтрацыяй цукру і сыр натуральнага высьпяваньня з~бактэрыямі, сапраўднае сьметанковае масла ці спрэд на аснове транстлушчаў.
 
-Цяпер зьявілася магчымасьць мадыфікаваць прадукты харчаваньня. Вядома, у некаторых выпадках гэта сапраўды карысна для здароўя (даданьне ёду ў соль, ГМА-рыс зь вітамінам А для прафіляктыкі сьлепаты, чорныя таматы з антацыянамі і да т.п.). Але, на жаль, часьцей мадыфікацыі маюць камэрцыйную мэту прадаць вам больш і прымусіць зьесьці больш менавіта гэтага прадукту, схаваць недахопы, патаньніць вытворчасьць, павялічыць устойлівасьць да пэстыцыдаў, працягнуць тэрмін захоўваньня. А такія мэты маюць наўвеце даданьне вялікай колькасьці інгрэдыентаў кшталту араматызатараў, фарбавальнікаў, цукру, тлушчу і да т. п. Гэта вядзе да пераяданьня і адпаведных рызыкаў для здароўя.
+Цяпер зьявілася магчымасьць мадыфікаваць прадукты харчаваньня. Вядома, у~некаторых выпадках гэта сапраўды карысна для здароўя (даданьне ёду ў~соль, ГМА-рыс зь вітамінам а~для прафіляктыкі сьлепаты, чорныя таматы з~антацыянамі і да т.~п.). Але, на жаль, часьцей мадыфікацыі маюць камэрцыйную мэту прадаць вам больш і прымусіць зьесьці больш менавіта гэтага прадукту, схаваць недахопы, патаньніць вытворчасьць, павялічыць устойлівасьць да пэстыцыдаў, працягнуць тэрмін захоўваньня. А~такія мэты маюць наўвеце даданьне вялікай колькасьці інгрэдыентаў кшталту араматызатараў, фарбавальнікаў, цукру, тлушчу і да т.~п. Гэта вядзе да пераяданьня і адпаведных рызыкаў для здароўя.
 
 \section{Як гэта ўплывае на здароўе?}
 
 \subsection{Харчовыя паводзіны.}
-Нашыя органы пачуцьцяў могуць правільна ацэньваць уласьцівасьці толькі тых прадуктаў, да якіх мы прыстасаваныя. Так, мы без праблемаў адрозьніваем сасьпелы і нясьпелы яблык, якаснае ці сапсаванае мяса і таму можам верыць сваім адчуваньням, калі ямо сапраўдную ежу. Харчовыя рэчывы зьмяшчаюць такія камбінацыі рэчываў, якія рэдка сустракаюцца ў прыродзе (тлушч, цукар і соль у адным прадукце), ня кажучы ўжо пра араматызацыю і ўзмацненьне смаку. Такая ежа паведамляе фальшывую інфармацыю нашым органам пачуцьцяў і парушае харчовыя паводзіны, узмацняе апэтыт і блякуе насычэньне. Падобныя камбінацыі высокаканцэнтраваных цукраў, тлушчаў, солі і ўзмацняльнікаў смаку не існуюць у прыродзе і дзейнічаюць разбуральна на нашыя харчовыя паводзіны. Ад такой ежы лёгка фармуецца залежнасьць, і ва ўмовах стрэсу мы пачынаем ужываць яе зь лішкам.
+Нашыя органы пачуцьцяў могуць правільна ацэньваць уласьцівасьці толькі тых прадуктаў, да якіх мы прыстасаваныя. Так, мы без праблемаў адрозьніваем сасьпелы і нясьпелы яблык, якаснае ці сапсаванае мяса і таму можам верыць сваім адчуваньням, калі ямо сапраўдную ежу. Харчовыя рэчывы зьмяшчаюць такія камбінацыі рэчываў, якія рэдка сустракаюцца ў~прыродзе (тлушч, цукар і соль у~адным прадукце), ня кажучы ўжо пра араматызацыю і ўзмацненьне смаку. Такая ежа паведамляе фальшывую інфармацыю нашым органам пачуцьцяў і парушае харчовыя паводзіны, узмацняе апэтыт і блякуе насычэньне. Падобныя камбінацыі высокаканцэнтраваных цукраў, тлушчаў, солі і ўзмацняльнікаў смаку не існуюць у~прыродзе і дзейнічаюць разбуральна на нашыя харчовыя паводзіны. Ад такой ежы лёгка фармуецца залежнасьць, і ва ўмовах стрэсу мы пачынаем ужываць яе зь лішкам.
 
 \subsection{Пераяданьне.}
-Адчуць насычэньне харчовымі рэчывамі практычна немагчыма, гэтак жа як і зьесьці іх у меру. Хачу зьвярнуць вашую ўвагу, што рэч нават ня ў колькасьці калёрыяў – харчовыя рэчывы парушаюць харчовыя паводзіны нават пры спажываньні звычайнай колькасьці калёрыяў. Паасобку вы не зьясьцё шмат цукру, тлушчу ці солі, але калі іх зьмяшаць, то вашым органам пачуцьцяў будзе цяжка выстаяць. І, вядома, важная асаблівасьць харчовых рэчываў – гэта неймаверная калярыйнасьць у невялікіх памерах (высокая ўдзельная калярыйнасьць). У шматлікіх гатовых прадуктах вялікая колькасьць цукру хаваецца за кіслотамі, таму вы неўзаметку можаце зьесьці неймаверную колькасьць цукру ў кіслым ці вострым соўсе ці выпіць у выглядзе напою, зьесьці чыстым такую ж колькасьць цукру было б вельмі складана.
+Адчуць насычэньне харчовымі рэчывамі практычна немагчыма, гэтак жа як і зьесьці іх у~меру. Хачу зьвярнуць вашую ўвагу, што рэч нават ня ў~колькасьці калёрыяў~--- харчовыя рэчывы парушаюць харчовыя паводзіны нават пры спажываньні звычайнай колькасьці калёрыяў. Паасобку вы не зьясьцё шмат цукру, тлушчу ці солі, але калі іх зьмяшаць, то вашым органам пачуцьцяў будзе цяжка выстаяць. І, вядома, важная асаблівасьць харчовых рэчываў~--- гэта неймаверная калярыйнасьць у~невялікіх памерах (высокая ўдзельная калярыйнасьць). У~шматлікіх гатовых прадуктах вялікая колькасьць цукру хаваецца за кіслотамі, таму вы неўзаметку можаце зьесьці неймаверную колькасьць цукру ў~кіслым ці вострым соўсе ці выпіць у~выглядзе напою, зьесьці чыстым такую ж колькасьць цукру было б вельмі складана.
 
-Нашы органы пачуцьцяў могуць правільна ацэньваць уласьцівасьці толькі тых прадуктаў, да якіх мы прыстасаваныя. Харчовыя рэчывы зьмяшчаюць такія камбінацыі рэчываў, якія рэдка сустракаюцца ў прыродзе (тлушч, цукар і соль у адным прадукце), не гаворачы ўжо пра араматызацыю і ўзмацненьне смаку. Такая ежа паведамляе фальшывую інфармацыю нашым органам пачуцьцяў і парушае нашыя харчовыя паводзіны, узмацняе апэтыт і блякуе насычэньне.
+\tipbox{Нашы органы пачуцьцяў могуць правільна ацэньваць уласьцівасьці толькі тых прадуктаў, да якіх мы прыстасаваныя. Харчовыя рэчывы зьмяшчаюць такія камбінацыі рэчываў, якія рэдка сустракаюцца ў~прыродзе (тлушч, цукар і соль у~адным прадукце), не гаворачы ўжо пра араматызацыю і ўзмацненьне смаку. Такая ежа паведамляе фальшывую інфармацыю нашым органам пачуцьцяў і парушае нашыя харчовыя паводзіны, узмацняе апэтыт і блякуе насычэньне.}
 
 \subsection{Складаная ежа.}
-Пры пэўным вонкавым падабенстве сапраўдная ежа і харчовыя рэчывы маюць сур'ёзныя адрозьненьні нават у засваеньні. Так, усё жывое складаецца з клетак, у якіх аптымальна спакаваныя харчовыя рэчывы і якія руйнуюцца пры страваваньні паступова. Сапраўдная ежа патрабуе больш увагі і намаганьняў у працэсе сталаваньня (дарослая ежа): уменьня даставаць косткі, разьбіраць яе і карыстацца інструмэнтамі (рыба, гарэхі, малюскі), а таксама дае больш нагрузкі на жавальную сыстэму (параўнайце мяса і фарш, цэльныя гарэхі і арэхавую. пасту). Складанасьць ежы гарантуе больш часу для сталаваньня, больш увагі і ўсьвядомленасьць у час яды. Харчовыя рэчывы лёгка адкусваюцца, адломліваюцца і распадаюцца да вадкасьці без асаблівых намаганьняў жаваньня, што правакуе пераяданьне і аўтаматычную яду. Нават калі назва прадукту застаецца ранейшай і мы ў яго нічога не дадаём, усё роўна перапрацоўка істотна зьмяняе яго ўласьцівасьці. Так, чым глыбейшая перапрацоўка аўсяных шматкоў, тым мацней павялічваецца іх глікеміческій індэкс (ступень уплыву на ваганьні цукру ў крыві). Шматкі, якія патрабуюць варкі, маюць індэкс 40, а тыя, што трэба адно заліць кіпнем, – 80. Так, крухмал застаецца крухмалам, але мяняецца даўжыня яго ланцужкоў.
+Пры пэўным вонкавым падабенстве сапраўдная ежа і харчовыя рэчывы маюць сур'ёзныя адрозьненьні нават у~засваеньні. Так, усё жывое складаецца з~клетак, у~якіх аптымальна спакаваныя харчовыя рэчывы і якія руйнуюцца пры страваваньні паступова. Сапраўдная ежа патрабуе больш увагі і намаганьняў у~працэсе сталаваньня (дарослая ежа): уменьня даставаць косткі, разьбіраць яе і карыстацца інструмэнтамі (рыба, гарэхі, малюскі), а~таксама дае больш нагрузкі на жавальную сыстэму (параўнайце мяса і фарш, цэльныя гарэхі і арэхавую пасту). Складанасьць ежы гарантуе больш часу для сталаваньня, больш увагі і ўсьвядомленасьць у~час яды. Харчовыя рэчывы лёгка адкусваюцца, адломліваюцца і распадаюцца да вадкасьці без асаблівых намаганьняў жаваньня, што правакуе пераяданьне і аўтаматычную яду. Нават калі назва прадукту застаецца ранейшай і мы ў~яго нічога не дадаём, усё роўна перапрацоўка істотна зьмяняе яго ўласьцівасьці. Так, чым глыбейшая перапрацоўка аўсяных шматкоў, тым мацней павялічваецца іх глікеміческій індэкс (ступень уплыву на ваганьні цукру ў~крыві). Шматкі, якія патрабуюць варкі, маюць індэкс 40, а~тыя, што трэба адно заліць кіпнем,~--- 80. Так, крухмал застаецца крухмалам, але мяняецца даўжыня яго ланцужкоў.
 
 \subsection{Бясьпека і карысьць.}
-Пры глыбокай перапрацоўцы харчовых рэчываў адбываецца страта шматлікіх карысных некалярыйных кампанэнтаў (мінэралы, вітаміны), акісьленьне нутрыентаў (амінакіслоты, поліненасычаныя тлустыя кіслоты) пры павышанай тэмпэратуры і інтэнсіўным кантакце з кіслародам паветра, для паляпшэньня вонкавага выгляду прымяняюцца таксычныя хімічныя рэагенты (адбельваньне мукі і г. д.), хаваюцца дэфеэкты вытворчасьці (чым глыбейшая перапрацоўка, тым вышэйшая рызыка забруджваньня таксынамі). У цэльным прадукце ёсьць лупіна, плёнкі, перагародкі, клеткавыя мэмбраны, свае антыаксыданты, якія абараняюць нутрыенты ад акісьленьня. Менавіта таму экстракты прадуктаў патэнцыйна маюць горшую якасьць, чым цэльныя прадукты, і ня могуць іх цалкам замяніць. Навуковыя дасьледаваньні паказваюць, што харчовыя рэчывы значна больш небясьпечныя для нашага здароўя. Так, перапрацаванае мяса больш павялічвае рызыку раку, чым цэльнае. А сьвежавыціснутыя сокі – рызыку дыябету, нашмат больш, чым цэльная садавіна.
+Пры глыбокай перапрацоўцы харчовых рэчываў адбываецца страта шматлікіх карысных некалярыйных кампанэнтаў (мінэралы, вітаміны), акісьленьне нутрыентаў (амінакіслоты, поліненасычаныя тлустыя кіслоты) пры павышанай тэмпэратуры і інтэнсіўным кантакце з~кіслародам паветра, для паляпшэньня вонкавага выгляду прымяняюцца таксычныя хімічныя рэагенты (адбельваньне мукі і г.~д.), хаваюцца дэфэкты вытворчасьці (чым глыбейшая перапрацоўка, тым вышэйшая рызыка забруджваньня таксынамі). У~цэльным прадукце ёсьць лупіна, плёнкі, перагародкі, клеткавыя мэмбраны, свае антыаксыданты, якія абараняюць нутрыенты ад акісьленьня. Менавіта таму экстракты прадуктаў патэнцыйна маюць горшую якасьць, чым цэльныя прадукты, і ня могуць іх цалкам замяніць. Навуковыя дасьледаваньні паказваюць, што харчовыя рэчывы значна больш небясьпечныя для нашага здароўя. Так, перапрацаванае мяса больш павялічвае рызыку раку, чым цэльнае. А~сьвежавыціснутыя сокі~--- рызыку дыябету, нашмат больш, чым цэльная садавіна.
 
 \subsection{Харчовыя дабаўкі.}
-Нягледзячы на тое, што большасьць дабавак у цэлым адносна бясьпечныя для здароўя, сярод іх ёсьць шэраг рэчываў, якія нэгатыўна ўплываюць на яго. Акрамя гэтага, дастаткова складана прадказаць іх сумеснае дзеяньне, патэнцыяваньне эфэктаў можа прыводзіць да непрадказальных і непажаданых наступстваў.
+Нягледзячы на тое, што большасьць дабавак у~цэлым адносна бясьпечныя для здароўя, сярод іх ёсьць шэраг рэчываў, якія нэгатыўна ўплываюць на яго. Акрамя гэтага, дастаткова складана прадказаць іх сумеснае дзеяньне, патэнцыяваньне эфэктаў можа прыводзіць да непрадказальных і непажаданых наступстваў.
 
-У цэльным прадукце ёсьць лупіна, плёнкі, перагародкі, клеткавыя мэмбраны, свае антыаксыданты, якія абараняюць нутрыенты ад акісьленьня. Менавіта таму экстракты прадуктаў патэнцыйна маюць горшую якасьць, чым цэльныя, і ня могуць іх замяніць.
+\tipbox{У цэльным прадукце ёсьць лупіна, плёнкі, перагародкі, клеткавыя мэмбраны, свае антыаксыданты, якія абараняюць нутрыенты ад акісьленьня. Менавіта таму экстракты прадуктаў патэнцыйна маюць горшую якасьць, чым цэльныя, і ня могуць іх замяніць.}
 
 \section{Асноўныя прынцыпы}
 
-\subsection{Правіла 80\%.}
-80% свайго рацыёну складаць з цэльных прадуктаў, пакідаючы 20% на свой густ. Аддаваць перавагу сапраўднай ежы – гэта вельмі простая і выйгрышная стратэгія харчаваньня. Для пачаткоўцаў – хай гэта будзе 50% цэльных прадуктаў, у ідэале – 80%. Вядома, можна і больш, але гэта можа парушаць вашую гнуткасьць і сацыяльную адаптацыю.
+\subsection{Правіла 80\,\%.}
+80\,\% свайго рацыёну складаць з~цэльных прадуктаў, пакідаючы 20\,\% на свой густ. Аддаваць перавагу сапраўднай ежы~--- гэта вельмі простая і выйгрышная стратэгія харчаваньня. Для пачаткоўцаў~--- хай гэта будзе 50\,\% цэльных прадуктаў, у~ідэале~--- 80\,\%. Вядома, можна і больш, але гэта можа парушаць вашую гнуткасьць і сацыяльную адаптацыю.
 
 \subsection{Прыклады.}
-Давайце разьбяром пары «сапраўдны прадукт» – «харчовае рэчыва»: цэльнае мяса – сасіскі (перапрацаванае мяса), яблыкі – яблычны сок, трускаўка – клубнічнае жэле, часнык – часнычны марынад, памідор – кетчуп. Суцэльны авёс – цукровыя аўсяныя шматкі хуткага прыгатаваньня. У такой справе важна абыходзіцца бяз крайнасьцяў. У рэальнасьці мы сутыкаемся зь вялікай колькасьцю прамежкавых кампанэнтаў, і ня ўсе яны адназначна кеаскія. Вось пара: сьвежая рыба – рыбная мука (сурымі). Насамрэч тут больш прамежкавых зьвёнаў: сьвежая рыба – рыба астуджаная – цэльная рыба глыбокай замарозкі – растрыбушаная тушка глыбокай замарозкі – кавалкі рыбы з косткамі і скурай – філе бяз скуры і костак – кансэрвы ва ўласным соку – рыбны фарш – паўфабрыкаты з рыбнага фаршу – сурымі. Варта аддаваць перавагу верхняму полюсу, выбіраючы даступныя вам варыянты на дадзены момант часу. Розьніца паміж сырой і сьвежазамарожанай рыбай не такая ўжо вялікая, а вось паміж сурымі і цэльнай рыбай – вельмі істотная. Цалкам вартымі варыянтамі будуць сьвежазамарожаная зеляніна і таматная паста (з таматаў, без даданьня цукру і крухмалу).
+Давайце разьбяром пары «сапраўдны прадукт»~--- «харчовае рэчыва»: цэльнае мяса~--- сасіскі (перапрацаванае мяса), яблыкі~--- яблычны сок, трускаўка~--- клубнічнае жэле, часнык~--- часнычны марынад, памідор~--- кетчуп. Суцэльны авёс~--- цукровыя аўсяныя шматкі хуткага прыгатаваньня. У~такой справе важна абыходзіцца бяз крайнасьцяў. У~рэальнасьці мы сутыкаемся зь вялікай колькасьцю прамежкавых кампанэнтаў, і ня ўсе яны адназначна кепскія. Вось пара: сьвежая рыба~--- рыбная мука (сурымі). Насамрэч тут больш прамежкавых зьвёнаў: сьвежая рыба~--- рыба астуджаная~--- цэльная рыба глыбокай замарозкі~--- растрыбушаная тушка глыбокай замарозкі~--- кавалкі рыбы з~косткамі і скурай~--- філе бяз скуры і костак~--- кансэрвы ва ўласным соку~--- рыбны фарш~--- паўфабрыкаты з~рыбнага фаршу~--- сурымі. Варта аддаваць перавагу верхняму полюсу, выбіраючы даступныя вам варыянты на дадзены момант часу. Розьніца паміж сырой і сьвежазамарожанай рыбай не такая ўжо вялікая, а~вось паміж сурымі і цэльнай рыбай~--- вельмі істотная. Цалкам вартымі варыянтамі будуць сьвежазамарожаная зеляніна і таматная паста (з таматаў, без даданьня цукру і крухмалу).
 
 \subsection{Сьвежыя прадукты.}
-Сьвежасьць зьяўляецца важнай умовай карысьці і бясьпекі прадуктаў, але многія цэльныя прадукты маюць нядоўгі тэрмін захоўваньня. Пры працяглым захоўваньні ў бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў, што пагаршае якасьць ежы і можа выклікаць непажаданую рэакцыю. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці такія акісьленыя тлушчы вельмі шкодна. Вугляводы захоўваюцца лепш, але садавіна і гародніна працяглага захоўваньня заўважна губляюць свае карысныя ўласьцівасьці. Сьвежую гародніну, якую прывозяцца здалёк, часта зрываюць яшчэ нясьпелай і зь нізкім утрыманьнем карысных кампанэнтаў. Менавіта таму глыбокая замарозка – гэта ідэальны варыянт захоўваньня шматлікіх прадуктаў у цэльным выглядзе, большасьць сваіх карысных уласьцівасьцяў прадукты пры ёй захоўваюць. Заўсёды выбірайце найболей сьвежыя прадукты, навучыцеся адрозьніваць іх вонкава.
+Сьвежасьць зьяўляецца важнай умовай карысьці і бясьпекі прадуктаў, але многія цэльныя прадукты маюць нядоўгі тэрмін захоўваньня. Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў, што пагаршае якасьць ежы і можа выклікаць непажаданую рэакцыю. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці такія акісьленыя тлушчы вельмі шкодна. Вугляводы захоўваюцца лепш, але садавіна і гародніна працяглага захоўваньня заўважна губляюць свае карысныя ўласьцівасьці. Сьвежую гародніну, якую прывозяцца здалёк, часта зрываюць яшчэ нясьпелай і зь нізкім утрыманьнем карысных кампанэнтаў. Менавіта таму глыбокая замарозка~--- гэта ідэальны варыянт захоўваньня шматлікіх прадуктаў у~цэльным выглядзе, большасьць сваіх карысных уласьцівасьцяў прадукты пры ёй захоўваюць. Заўсёды выбірайце найболей сьвежыя прадукты, навучыцеся адрозьніваць іх вонкава.
 
 \subsection{Правіла «маладой» ежы.}
-Сута гэтага правіла вельмі простая: імкнуцца выбіраць у якасьці ежы маладзейшыя расьліны (маладое лісьце і парасткі, пупышкі, верхавіны), маладзейшую рыбу і мяса. Вядома, «маладыя» прадукты харчаваньня здаўна шанаваліся як больш лёгказасваяльныя і пажыўныя, але навуковае абгрунтаваньне гэтаму ўдалося атрымаць нядаўна. Навукоўцы давялі, што «маладая» дыета падаўжае жыцьцё, а «старая» скарачае жыцьцё ў параўнаньні з «маладой». У маладых уцёках чайнага куста відавочна больш карысных рэчываў. А вось максімальная канцэнтрацыя сульфарафану ўтрымліваецца менавіта ў парастках брокалі. Што да шкодных спалучэньняў, то ў маладых прадуктах іх меней. Так, у буйной і дарослай рыбе ртуці больш, чым у дробнай і маладой.
+Сута гэтага правіла вельмі простая: імкнуцца выбіраць у~якасьці ежы маладзейшыя расьліны (маладое лісьце і парасткі, пупышкі, верхавіны), маладзейшую рыбу і мяса. Вядома, «маладыя» прадукты харчаваньня здаўна шанаваліся як больш лёгказасваяльныя і пажыўныя, але навуковае абгрунтаваньне гэтаму ўдалося атрымаць нядаўна. Навукоўцы давялі, што «маладая» дыета падаўжае жыцьцё, а~«старая» скарачае жыцьцё ў~параўнаньні з~«маладой». У~маладых уцёках чайнага куста відавочна больш карысных рэчываў. А~вось максімальная канцэнтрацыя сульфарафану ўтрымліваецца менавіта ў~парастках брокалі. Што да шкодных спалучэньняў, то ў~маладых прадуктах іх меней. Так, у~буйной і дарослай рыбе ртуці больш, чым у~дробнай і маладой.
 
-Пры працяглым захоўваньні ў бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў, што пагаршае якасьць ежы. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці іх вельмі шкодна. Вугляводы захоўваюцца лепей, але садавіна і гародніна працяглага захоўваньня відавочна губляюць свае карысныя ўласьцівасьці.
+\tipbox{Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў, што пагаршае якасьць ежы. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці іх вельмі шкодна. Вугляводы захоўваюцца лепей, але садавіна і гародніна працяглага захоўваньня відавочна губляюць свае карысныя ўласьцівасьці.}
 
 \section{Як трымацца правіла? Ідэі і парады}
 
 \subsection{Смакавыя рэцэптары.}
-Калі вы звыклі есьці шмат салодкага, салёнага і да т.п., то простыя цэльныя прадукты пададуцца вам спачатку нясмачнымі і прэснымі. Ня бойцеся, так будзе не заўсёды. За некалькі тыдняў вашыя смакавыя рэцэптары вернуць сабе адчувальнасьць і ежа здабудзе яшчэ больш адценьняў і смакаў.
+Калі вы звыклі есьці шмат салодкага, салёнага і да т.~п., то простыя цэльныя прадукты пададуцца вам спачатку нясмачнымі і прэснымі. Ня бойцеся, так будзе не заўсёды. За некалькі тыдняў вашыя смакавыя рэцэптары вернуць сабе адчувальнасьць і ежа здабудзе яшчэ больш адценьняў і смакаў.
 
-\subsection{Пачніце з простага.}
-Выберыце самыя смачныя цэльныя прадукты (гарэхі, гародніна і да т.п.), якія вы можаце лёгка гатаваць і пазнаваць, пачніце калекцыянаваць рэцэпты. Больш складаную ежу, такую як морапрадукты ці грыбы, дадавайце пазьней. Няхай першыя рэцэпты будуць простымі і хуткімі.
+\subsection{Пачніце з~простага.}
+Выберыце самыя смачныя цэльныя прадукты (гарэхі, гародніна і да т.~п.), якія вы можаце лёгка гатаваць і пазнаваць, пачніце калекцыянаваць рэцэпты. Больш складаную ежу, такую як морапрадукты ці грыбы, дадавайце пазьней. Няхай першыя рэцэпты будуць простымі і хуткімі.
 
 \subsection{Стварыце запас дома.}
-Памятайце, што можна ствараць запас і сапраўдных прадуктаў: яны добра захоўваюцца дома як у сьвежазамарожаным выглядзе, так і ў цёмных шафах у прахалодным месцы. Сапраўдныя прадукты – гэта не заўсёды ўтомная і доўгая гатоўля, іх можна прыгатаваць хутка. Прыклад хуткага сьняданку з маразільні: спаржавая фасоля і цэльны ласось. Перакладзіце іх з маразільні ў лядоўню ўвечары, а раніцай прамыйце вадой і зварыце разам за 10 хвілінаў – будзе хутка і смачна.
+Памятайце, што можна ствараць запас і сапраўдных прадуктаў: яны добра захоўваюцца дома як у~сьвежазамарожаным выглядзе, так і ў~цёмных шафах у~прахалодным месцы. Сапраўдныя прадукты~--- гэта не заўсёды ўтомная і доўгая гатоўля, іх можна прыгатаваць хутка. Прыклад хуткага сьняданку з~маразільні: спаржавая фасоля і цэльны ласось. Перакладзіце іх з~маразільні ў~лядоўню ўвечары, а~раніцай прамыйце вадой і зварыце разам за 10 хвілінаў~--- будзе хутка і смачна.
 
 \subsection{Паступовы пераход.}
-Дайце кішачніку адаптавацца да клятчаткі. Рэзкі пераход можа выклікаць пэўныя праблемы з кішачнікам. Ня бойцеся іх, яны неўзабаве зьнікнуць, але клятчатку варта павялічваць у рацыёне паступова.
+Дайце кішачніку адаптавацца да клятчаткі. Рэзкі пераход можа выклікаць пэўныя праблемы з~кішачнікам. Ня бойцеся іх, яны неўзабаве зьнікнуць, але клятчатку варта павялічваць у~рацыёне паступова.
 
 \subsection{Мясцовыя прадукты.}
 Аддавайце па магчымасьці перавагу мясцовым (ці блізкім да іх) сэзонным прадуктам. Яны мінімальна перавозяцца і захоўваюцца. Вы можаце дасьледаваць лякальныя рынкі, уведаць добрых пастаўнікоў.
 
 \subsection{«Экстрагаваныя прадукты».}
-Па магчымасьці старайцеся папоўніць умераны дэфіцыт не з дапамогай БАДаў, а ежай. Так, рыба зьніжае рызыку хваробы Альцгеймэра, а паасобку вітамін D або амэга-3 – не, клятчатка ў складзе садавіны зьніжае рызыку раку кутніцы (кутняй кішкі), а вось яна ж праз дабаўкі – не зьніжае. Зразумела, сур'ёзны дэфіцыт ежай скампэнсаваць цяжэй, тады ўжо можна зьвярнуцца і да таблетак. Але стратэгія «БАДы жменяй замест нармальнай ежы» ня можа быць названая здаровай.
+Па магчымасьці старайцеся папоўніць умераны дэфіцыт не з~дапамогай БАДаў, а~ежай. Так, рыба зьніжае рызыку хваробы Альцгеймэра, а~паасобку вітамін D або амэга-3~--- не, клятчатка ў~складзе садавіны зьніжае рызыку раку кутніцы (кутняй кішкі), а~вось яна ж праз дабаўкі~--- не зьніжае. Зразумела, сур'ёзны дэфіцыт ежай скампэнсаваць цяжэй, тады ўжо можна зьвярнуцца і да таблетак. Але стратэгія «БАДы жменяй замест нармальнай ежы» ня можа быць названая здаровай.
 
 \subsection{Арэол здаровага харчаваньня.}
-Гэта маркетынгавая пастка, калі цэльная здаровая ежа спалучаецца зь ня вельмі карыснай. Напрыклад, лісток салаты на піцы, даданьне гарэхаў у марозіва, даданьне кунжутных семак у батон. Гэтыя мікраскапічныя дабаўкі ня зьменяць дзеяньне асноўнай стравы, і, вядома ж, пэктын у зэфіры ані не заменіць яблыкаў і не адменіць дзеяньне цукру.
+Гэта маркетынгавая пастка, калі цэльная здаровая ежа спалучаецца зь ня вельмі карыснай. Напрыклад, лісток салаты на піцы, даданьне гарэхаў у~марозіва, даданьне кунжутных семак у~батон. Гэтыя мікраскапічныя дабаўкі ня зьменяць дзеяньне асноўнай стравы, і, вядома ж, пэктын у~зэфіры ані не заменіць яблыкаў і не адменіць дзеяньне цукру.
 
 \subsection{«Натуральныя інгрэдыенты».}
-Натуральнасьць зусім не зьяўляецца закладам здароўя. Цукар у натуральным соку дзейнічае гэтак жа, як і ў газіроўцы, і маецца ў фруктовых соках у супастаўнай колькасьці. У некаторых краінах сэртыфікацыя «арганік» можа нешта значыць, у шматлікіх іншых гэтае слова – толькі маркетынгавы крок, роўна як і словы «бія», «эка» і да т.п.
+Натуральнасьць зусім не зьяўляецца закладам здароўя. Цукар у~натуральным соку дзейнічае гэтак жа, як і ў~газіроўцы, і маецца ў~фруктовых соках у~супастаўнай колькасьці. У~некаторых краінах сэртыфікацыя «арганік» можа нешта значыць, у~шматлікіх іншых гэтае слова~--- толькі маркетынгавы крок, роўна як і словы «бія», «эка» і да т.~п.
 
-Лісток салаты на піцы, даданьне гарэхаў у марозіва, даданьне кунжутных семак у батон – усё гэта маркетынгавыя пасткі. Гэтыя мікраскапічныя дабаўкі ня зьменяць дзеяньне асноўнай стравы.
+\tipbox{Лісток салаты на піцы, даданьне гарэхаў у~марозіва, даданьне кунжутных семак у~батон~--- усё гэта маркетынгавыя пасткі. Гэтыя мікраскапічныя дабаўкі ня зьменяць дзеяньне асноўнай стравы.}
 
 \subsection{Здаровы глузд.}
-Вядома ж, даданьне харчовых дабавак не псуе ежу, а часта і абараняе яе, многія зь іх бясшкодныя і нават карысныя. Таму шануйце здаровы глузд і ня кідайцеся ў скрайнасьці.
+Вядома ж, даданьне харчовых дабавак не псуе ежу, а~часта і абараняе яе, многія зь іх бясшкодныя і нават карысныя. Таму шануйце здаровы глузд і ня кідайцеся ў~скрайнасьці.
 
 \subsection{Палеадыета.}
-Сэнс дыеты ў пазьбяганьні «гатовых сучасных» прадуктаў, уключна са збажыною, бабовымі, расьліннымі тлушчамі і малочнымі прадуктамі. Плюс гэтай дыеты ў тым, што вы пачынаеце есьці больш цэльных прадуктаў, мінус у тым, што толкам ніхто ня ведае, як менавіта елі нашыя продкі. Дасьледаваньні паказваюць, што нашыя продкі былі ўсяеднымі, таму елі і збажыну, ды і ўсё астатняе, што трапляла пад руку. Мне падабаецца ў палеападыходзе ўлік нашых генэтычных і эвалюцыйных асаблівасьцяў, што важна для разуменьня таго, чаму нам нешта пасуе, а нешта – не. Бо кантэкст эвалюцыі вызначае наш аптымальны выбар.
+Сэнс дыеты ў~пазьбяганьні «гатовых сучасных» прадуктаў, уключна са збажыною, бабовымі, расьліннымі тлушчамі і малочнымі прадуктамі. Плюс гэтай дыеты ў~тым, што вы пачынаеце есьці больш цэльных прадуктаў, мінус у~тым, што толкам ніхто ня ведае, як менавіта елі нашыя продкі. Дасьледаваньні паказваюць, што нашыя продкі былі ўсяеднымі, таму елі і збажыну, ды і ўсё астатняе, што трапляла пад руку. Мне падабаецца ў~палеападыходзе ўлік нашых генэтычных і эвалюцыйных асаблівасьцяў, што важна для разуменьня таго, чаму нам нешта пасуе, а~нешта~--- не. Бо кантэкст эвалюцыі вызначае наш аптымальны выбар.
+
