--- a/nutrition/chapter6.tex
+++ b/nutrition/chapter6.tex
@@ -1,38 +1,38 @@
 \chapter{Колькасьць прыёмаў ежы}
 
-Згодна з дасьледаваньнямі, тры асноўныя прыёмы ежы ў дзень зьяўляюцца аптымальнымі для доўгатэрміновага падтрыманьня здаровай вагі і самаадчуваньня. Такое правіла існуе ў шматлікіх культурах і традыцыях, суседнічаючы з двума прыёмамі ежы.
+Згодна з~дасьледаваньнямі, тры асноўныя прыёмы ежы ў~дзень зьяўляюцца аптымальнымі для доўгатэрміновага падтрыманьня здаровай вагі і самаадчуваньня. Такое правіла існуе ў~шматлікіх культурах і традыцыях, суседнічаючы з~двума прыёмамі ежы.
 
-Колькі разоў на дзень есьці? Модная цяпер парада – павялічыць колькасьць прыёмаў ежы, але ў доўгатэрміновай пэрспэктыве гэта працуе супраць нас. Чалавек у сучасным сьвеце жыве пад узьдзеяньнем вялікай колькасьці стрэсаў і задачаў, кожная зь якіх канкуруе за яго ўвагу і час. Парада лічыць калёрыі і вылучаць 5-6 паўнавартасных рэгулярных прыёмаў ежы, як таго патрабуе падыход дробавага харчаваньня, патрабуе вялікіх затрат часу, ня мае перавагаў перад 2-3-разовым харчаваньнем, але пры гэтым падтрымліваецца дзякуючы вялізнай колькасьці мітаў, якія мы з вамі абмяркуем.
+Колькі разоў на дзень есьці? Модная цяпер парада~--- павялічыць колькасьць прыёмаў ежы, але ў~доўгатэрміновай пэрспэктыве гэта працуе супраць нас. Чалавек у~сучасным сьвеце жыве пад узьдзеяньнем вялікай колькасьці стрэсаў і задачаў, кожная зь якіх канкуруе за яго ўвагу і час. Парада лічыць калёрыі і вылучаць 5--6 паўнавартасных рэгулярных прыёмаў ежы, як таго патрабуе падыход дробавага харчаваньня, патрабуе вялікіх затрат часу, ня мае перавагаў перад 2--3-разовым харчаваньнем, але пры гэтым падтрымліваецца дзякуючы вялізнай колькасьці мітаў, якія мы з~вамі абмяркуем.
 
-Модная цяпер парада – павялічыць колькасьць прыёмаў ежы, але ў доўгатэрміновай пэрспэктыве гэта працуе супраць нас. Неабходнасьць лічыць калёрыі і рабіць 5-6 паўнавартасных прыёмаў ежы, як таго патрабуе падыход дробавага харчаваньня, – гэта як мінімум вялікія часавыя выдаткі.
+\tipbox{Модная цяпер парада~--- павялічыць колькасьць прыёмаў ежы, але ў~доўгатэрміновай пэрспэктыве гэта працуе супраць нас. Неабходнасьць лічыць калёрыі і рабіць 5--6 паўнавартасных прыёмаў ежы, як таго патрабуе падыход дробавага харчаваньня,~--- гэта як мінімум вялікія часавыя выдаткі.}
 
-Зьежце дастатковую колькасьць ежы, каб быць сытымі і ня думаць пра ежу, а затым спакойна займайцеся сваімі справамі. У рэшце рэшт, вы ж і бак машыны запраўляе адразу, а не па 5 літраў за заезд на запраўку? Гэта эканоміць і час, і здароўе!
+Зьежце дастатковую колькасьць ежы, каб быць сытымі і ня думаць пра ежу, а~затым спакойна займайцеся сваімі справамі. У~рэшце рэшт, вы ж і бак машыны запраўляе адразу, а~не па 5 літраў за заезд на запраўку? Гэта эканоміць і час, і здароўе!
 
 \section{Як зьявілася праблема?}
 
-Першапачаткова дробавае харчаваньне як лячэбная дыета распрацоўвалася для людзей з захворваньнямі страўнікава-кішачнага тракту (язвавая хвароба, гастраэзафагіяльны рэфлюкс, халецыстэктамія і інш.), а таксама для аслабленых пацыентаў пасьля апэрацый. І гэта цалкам апраўдана.
+Першапачаткова дробавае харчаваньне як лячэбная дыета распрацоўвалася для людзей з~захворваньнямі страўнікава-кішачнага тракту (язвавая хвароба, гастраэзафагіяльны рэфлюкс, халецыстэктамія і інш.), а~таксама для аслабленых пацыентаў пасьля апэрацый. І~гэта цалкам апраўдана.
 
-У наш час дробавае харчаваньне ўзьнікла першапачаткова на памылковай здагадцы, што павелічэньне частаты харчаваньня здольнае «разагнаць» мэтабалізм. Навуковыя дасьледаваньні паказваюць, што ніякай разгонкі не адбываецца, а тэрмічны эфэкт ежы прапарцыйны содневай колькасьці калёрыяў, а ня колькасьці прыёмаў ежы. Вядома, важкім укладам у фармаваньне міта пра дробавае харчаваньне зьяўляецца міт «утаймаваньня голаду», які, па сутнасьці, зводзіцца да таго, каб «перабіць» апэтыт. У ісьце гэта нездаровы падыход, які толькі патурае нашаму жаданьню есьці.
+У наш час дробавае харчаваньне ўзьнікла першапачаткова на памылковай здагадцы, што павелічэньне частаты харчаваньня здольнае «разагнаць» мэтабалізм. Навуковыя дасьледаваньні паказваюць, што ніякай разгонкі не адбываецца, а~тэрмічны эфэкт ежы прапарцыйны содневай колькасьці калёрыяў, а~ня колькасьці прыёмаў ежы. Вядома, важкім укладам у~фармаваньне міта пра дробавае харчаваньне зьяўляецца міт «утаймаваньня голаду», які, па сутнасьці, зводзіцца да таго, каб «перабіць» апэтыт. У~ісьце гэта нездаровы падыход, які толькі патурае нашаму жаданьню есьці.
 
-Калі мы зірнём на вынікі навуковых дасьледаваньняў, то ў кароткатэрміновым пэрыядзе ў некалькі месяцаў розьніцы паміж трыма і шасьцю прыёмамі ежы пры аднолькавай колькасьці калёрыяў няма, то-бок частае харчаваньне не палепшыць стан здароўя (вага, сытасьць, аналізы). Але калі мы возьмем больш працяглы пэрыяд, у некалькі гадоў, дык існуе выразная заканамернасьць паміж колькасьцю прыёмаў ежы і здароўем. Тыя, хто еў 2 разы на дзень, мелі тэндэнцыю зьніжэньня вагі, тыя, хто еў 3 разы, захоўвалі вагу, а тыя, хто еў часьцей за 3 разы на дзень, мелі няўхільную тэндэнцыю павелічэньня вагі з узростам.
+Калі мы зірнём на вынікі навуковых дасьледаваньняў, то ў~кароткатэрміновым пэрыядзе ў~некалькі месяцаў розьніцы паміж трыма і шасьцю прыёмамі ежы пры аднолькавай колькасьці калёрыяў няма, то-бок частае харчаваньне не палепшыць стан здароўя (вага, сытасьць, аналізы). Але калі мы возьмем больш працяглы пэрыяд, у~некалькі гадоў, дык існуе выразная заканамернасьць паміж колькасьцю прыёмаў ежы і здароўем. Тыя, хто еў 2 разы на дзень, мелі тэндэнцыю зьніжэньня вагі, тыя, хто еў 3 разы, захоўвалі вагу, а~тыя, хто еў часьцей за 3 разы на дзень, мелі няўхільную тэндэнцыю павелічэньня вагі з~узростам.
 
-Чаму так адбываецца? Як звычайна, уся справа ў калёрыях і звычках. Нам цяжка сьвядома кантраляваць дакладнае спажываньне калёрыяў гадамі. Стрэсы, перагрузка, стомленасьць прыводзяць да зьніжэньня сьвядомага кантролю, і наша харчаваньне пераходзіць пад кантроль звычак. Сілкуючыся 5-6 разоў на дзень, мы павялічваем імавернасьць пераяданьня ў параўнаньні з харчаваньнем 2-3 разы на дзень. Вядома, важна разумець, што на кароткатэрміновым этапе любая, нават абсурдная, дыета можа прывесьці да пэўных вынікаў выключна за кошт большай увагі да харчаваньня. Памятайце пра тое, што для чалавека нашмат фізыялягічней абмяжоўваць доступ да ежы, а не скарачаць колькасьць калёрыяў.
+Чаму так адбываецца? Як звычайна, уся справа ў~калёрыях і звычках. Нам цяжка сьвядома кантраляваць дакладнае спажываньне калёрыяў гадамі. Стрэсы, перагрузка, стомленасьць прыводзяць да зьніжэньня сьвядомага кантролю, і наша харчаваньне пераходзіць пад кантроль звычак. Сілкуючыся 5--6 разоў на дзень, мы павялічваем імавернасьць пераяданьня ў~параўнаньні з~харчаваньнем 2--3 разы на дзень. Вядома, важна разумець, што на кароткатэрміновым этапе любая, нават абсурдная, дыета можа прывесьці да пэўных вынікаў выключна за кошт большай увагі да харчаваньня. Памятайце пра тое, што для чалавека нашмат фізыялягічней абмяжоўваць доступ да ежы, а~не скарачаць колькасьць калёрыяў.
 
-Аднак заўсёды ўзьнікае пытаньне: чаму столькі дыетолягаў гавораць аб дробавым харчаваньні і столькі людзей кажуць, што схуднелі на ім? Адказ просты: парада есьці часьцей заўсёды гучыць і ўспрымаецца больш пазытыўна, чым парада есьці радзей. Акрамя гэтага, частыя прыёмы ежы зьніжаюць узровень грэліну, чым прыносяць часовае палягчэньне. Аднак гэта ня вельмі карысна ў доўгатэрміновай пэрспэктыве (гл. разьдзел «Ежце, калі галодныя»).
+Аднак заўсёды ўзьнікае пытаньне: чаму столькі дыетолягаў гавораць аб дробавым харчаваньні і столькі людзей кажуць, што схуднелі на ім? Адказ просты: парада есьці часьцей заўсёды гучыць і ўспрымаецца больш пазытыўна, чым парада есьці радзей. Акрамя гэтага, частыя прыёмы ежы зьніжаюць узровень грэліну, чым прыносяць часовае палягчэньне. Аднак гэта ня вельмі карысна ў~доўгатэрміновай пэрспэктыве (гл. правіла «Ежце, калі галодныя»).
 
 \section{Як гэта ўплывае на здароўе?}
 
-Частыя прыёмы ежы не працуюць у доўгатэрміновай пэрспэктыве. Штодзённы кантроль за гатоўляй пяці-шасьці прыёмаў ежы з падлікам калёрыяў вельмі энэргаёмісты. Чалавек і так прымае 300-400 харчовых рашэньняў за содні, таму дастаткова будзе любога стрэсу або стомленасьці, каб гэта перастала працаваць. Схуднець хутка лёгка на любой дыеце, а вось утрымаць вагу на 5-10 гадоў ужо складаней. Праз час кантроль за падлікам калёрыяў слабне, а звычка есьці часта – застаецца, што і прыводзіць да набору вагі.
+Частыя прыёмы ежы не працуюць у~доўгатэрміновай пэрспэктыве. Штодзённы кантроль за гатоўляй пяці-шасьці прыёмаў ежы з~падлікам калёрыяў вельмі энэргаёмісты. Чалавек і так прымае 300--400 харчовых рашэньняў за содні, таму дастаткова будзе любога стрэсу або стомленасьці, каб гэта перастала працаваць. Схуднець хутка лёгка на любой дыеце, а~вось утрымаць вагу на 5--10 гадоў ужо складаней. Праз час кантроль за падлікам калёрыяў слабне, а~звычка есьці часта~--- застаецца, што і прыводзіць да набору вагі.
 
-Дробавае харчаваньне парушае нармальную працу сыстэмы «голад – сытасьць». Нягледзячы на тое, што яно зьніжае голад, разам з тым пакутуе і пачуцьцё сытасьці. Трохразовае харчаваньне дазваляе падтрымліваць больш стабільнае пачуцьцё насычэньня.
+Дробавае харчаваньне парушае нармальную працу сыстэмы «голад~--- сытасьць». Нягледзячы на тое, што яно зьніжае голад, разам з~тым пакутуе і пачуцьцё сытасьці. Трохразовае харчаваньне дазваляе падтрымліваць больш стабільнае пачуцьцё насычэньня.
 
 \subsection{Апантанасьць ежай.}
-Частыя думкі аб ежы, фіксацыя на ёй, падлік калёрыяў могуць лёгка прывесьці да парушэньня харчовых паводзінаў. Здаровае стаўленьне да ежы – калі вы думаеце пра яе, але яна не зьяўляецца галоўным чыньнікам, які структуруе вашае жыцьцё і кіруе ім. Ніколі не забывайце, што ежа слугуе вам, а ня вы слугуеце ежы.
+Частыя думкі аб ежы, фіксацыя на ёй, падлік калёрыяў могуць лёгка прывесьці да парушэньня харчовых паводзінаў. Здаровае стаўленьне да ежы~--- калі вы думаеце пра яе, але яна не зьяўляецца галоўным чыньнікам, які структуруе вашае жыцьцё і кіруе ім. Ніколі не забывайце, што ежа слугуе вам, а~ня вы слугуеце ежы.
 
 \subsection{Вы не худнееце.}
-Навуковыя дасьледаваньні паказваюць, што павелічэньне частаты харчаваньня нават да 9-10 разоў у дзень пры агульнай аднолькавай колькасьці калёрыяў ніяк не дапамагае худнець. Калі вы схільныя пераядаць, то пры 5-6-разовым харчаваньні будзеце зьядаць прыкметна больш ежы, чым пры 3-разовым.
+Навуковыя дасьледаваньні паказваюць, што павелічэньне частаты харчаваньня нават да 9--10 разоў у~дзень пры агульнай аднолькавай колькасьці калёрыяў ніяк не дапамагае худнець. Калі вы схільныя пераядаць, то пры 5--6-разовым харчаваньні будзеце зьядаць прыкметна больш ежы, чым пры 3-разовым.
 
-Частыя думкі аб ежы, фіксацыя на ёй, падлік калёрыяў могуць лёгка прывесьці да парушэньня харчовых паводзінаў. Здаровае стаўленьне да ежы – калі вы думаеце пра яе, але яна не зьяўляецца галоўным чыньнікам, які кіруе вашым жыцьцём.
+\tipbox{Частыя думкі аб ежы, фіксацыя на ёй, падлік калёрыяў могуць лёгка прывесьці да парушэньня харчовых паводзінаў. Здаровае стаўленьне да ежы~--- калі вы думаеце пра яе, але яна не зьяўляецца галоўным чыньнікам, які кіруе вашым жыцьцём.}
 
 \subsection{Адсутнасьць гнуткасьці.}
 Прывучаючы сябе да строгага прыёму ежы празь невялікія прамежкі, мы пакутуем, калі пачынаем прапускаць гэтыя прыёмы праз зрухі працоўнага графіку.
@@ -41,57 +41,58 @@
 Працяглае дробавае харчаваньне можа прывесьці да ўзмацненьня інсулінарэзыстэнтнасьці, зьніжэньня ўзроўню грэліну, самататропнага гармону. Карысныя ўласьцівасьці гармону грэліну ўключаюць абарону сэрца і нырак, павышэньне нэўрагенэзу, антыдэпрэсіўнае дзеяньне і іншыя.
 
 \section{Асноўныя прынцыпы}
-Для дзяцей будуць аптымальнымі 4 прыёмы ежы, для жанчынаў – 3-4, для мужчынаў – 2-3. Павелічэньне частаты прыёмаў ежы больш за тры для здаровых людзей не нясе перавагаў для здароўя і не спрыяе пахуданьню. Тым, хто есьць часта ці хаатычна, парадкаваньне прыёмаў ежы дазваляе стварыць просты і зразумелы рэжым харчаваньяня, які будзе іх падтрымліваць і структураваць харчовы рэжым. Такім чынам, давайце разгледзім наступныя рэжымы харчаваньня.
+
+Для дзяцей будуць аптымальнымі 4 прыёмы ежы, для жанчынаў~--- 3--4, для мужчынаў~--- 2--3. Павелічэньне частаты прыёмаў ежы больш за тры для здаровых людзей не нясе перавагаў для здароўя і не спрыяе пахуданьню. Тым, хто есьць часта ці хаатычна, парадкаваньне прыёмаў ежы дазваляе стварыць просты і зразумелы рэжым харчаваньяня, які будзе іх падтрымліваць і структураваць харчовы рэжым. Такім чынам, давайце разгледзім наступныя рэжымы харчаваньня.
 
 \subsection{Больш за 4 прыёмы ежы.}
-Пасуе дзецям, а таксама ў якасьці лекавай дыеты пры некаторых хваробах страўнікава-кішачнага тракту. Падыдзе прафэсійным атлетам, якія маюць патрэбу ў вялікай колькасьці калёрыяў праз інтэнсіўныя трэніроўкі. Зьвярніце ўвагу, што тыя, хто па-аматарску займаецца спортам па гадзіне 3-4 разы на тыдзень, ня маюць патрэбы ў павелічэньні частаты харчаваньня.
+Пасуе дзецям, а~таксама ў~якасьці лекавай дыеты пры некаторых хваробах страўнікава-кішачнага тракту. Падыдзе прафэсійным атлетам, якія маюць патрэбу ў~вялікай колькасьці калёрыяў праз інтэнсіўныя трэніроўкі. Зьвярніце ўвагу, што тыя, хто па-аматарску займаецца спортам па гадзіне 3--4 разы на тыдзень, ня маюць патрэбы ў~павелічэньні частаты харчаваньня.
 
-Павелічэньне частаты харчаваньня нават да 9-10 разоў на дзень пры агульнай аднолькавай колькасьці калёрыяў аніяк не дапамагае худнець. Калі вы схільныя пераядаць, то пры 5-6-разовым харчаваньні будзеце зьядаць прыкметна больш ежы, чым пры 3-разовым.
+\tipbox{Павелічэньне частаты харчаваньня нават да 9--10 разоў на дзень пры агульнай аднолькавай колькасьці калёрыяў аніяк не дапамагае худнець. Калі вы схільныя пераядаць, то пры 5--6-разовым харчаваньні будзеце зьядаць прыкметна больш ежы, чым пры 3-разовым.}
 
 \subsection{4 прыёмы ежы.}
-Пасуе дзецям пасьля спыненьня груднога кармленьня і больш старэйшага ўзросту, атлетам, якія аднаўляюцца пасьля хваробы.
+Пасуе дзецям пасьля спыненьня груднога кармленьня і больш старэйшага ўзросту, атлетам, тым, хто аднаўляюцца пасьля хваробы.
 
 \subsection{3 прыёмы ежы.}
-Стандартная частата прыёму ежы (сьняданак, абед і вячэра). У цэлым падыдзе большасьці людзей.
+Стандартная частата прыёму ежы (сьняданак, абед і вячэра). У~цэлым падыдзе большасьці людзей.
 
 \subsection{2 прыёмы ежы.}
-Сьняданак і абед, для людзей зь вячэрнім тыпам харчаваньня – абед і вячэра. Два прыёмы ежы на дзень уласьцівыя шматлікім традыцыйным культурам ад Усходу да Захаду. Так, старажытныя грэкі елі 2 разы – ланч (ariston) і вячэру (deipnon). Стратэгія есьці 2 разы на дзень можа падысьці для пахудзеньня і падтрыманьня вагі. Большасьць мужчын пераносяць яе лёгка, а вось для некаторых жанчын харчавацца тройчы на дзень можа быць больш прыярытэтнай стратэгіяй, улічваючы іх гарманальныя асаблівасьці.
+Сьняданак і абед, для людзей зь вячэрнім тыпам харчаваньня~--- абед і вячэра. Два прыёмы ежы на дзень уласьцівыя шматлікім традыцыйным культурам ад Усходу да Захаду. Так, старажытныя грэкі елі 2 разы~--- ланч (ariston) і вячэру (deipnon). Стратэгія есьці 2 разы на дзень можа падысьці для пахудзеньня і падтрыманьня вагі. Большасьць мужчын пераносяць яе лёгка, а~вось для некаторых жанчын харчавацца тройчы на дзень можа быць больш прыярытэтнай стратэгіяй, улічваючы іх гарманальныя асаблівасьці.
 
 \subsection{1 прыём ежы на дзень.}
-Па сутнасьці, такі падыход уяўляе сабой радыкальнае памяншэньне харчовага вакна да 1 гадзіны на содні (23:1). Дасьледаваньні, праведзеныя на жывёлах, паказалі, што такі мэтад запавольвае працэс старэньня ў мышэй. Традыцыйна такая дыета была распаўсюджаная сярод, напрыклад, рымскіх легіянэраў («дыета ваяра») або будыйскіх манахаў («Тры разы на дзень ядуць жывёлы, два разы чалавек і адзін раз – тыя, хто ідзе шляхам Ісьціны», «Сутра 42 кіраўнікоў, сказаная Будам»). Мы можам разглядаць такое харчаваньне як варыянт разгрузачнага дня на 24 гадзіны і карыстацца ім 1-2 разы на тыдзень. Сучаснымі прыхільнікамі такога харчаваньня зьяўляюцца некаторыя біяхакеры, аднак для шырокай аўдыторыі гэты падыход нельга рэкамэндаваць.
+Па сутнасьці, такі падыход уяўляе сабой радыкальнае памяншэньне харчовага вакна да 1 гадзіны на содні (23/1). Дасьледаваньні, праведзеныя на жывёлах, паказалі, што такі мэтад запавольвае працэс старэньня ў~мышэй. Традыцыйна такая дыета была распаўсюджаная сярод, напрыклад, рымскіх легіянэраў («дыета ваяра») або будыйскіх манахаў («Тры разы на дзень ядуць жывёлы, два разы чалавек і адзін раз~--- тыя, хто ідзе шляхам Ісьціны», «Сутра 42 кіраўнікоў, сказаная Будам»). Мы можам разглядаць такое харчаваньне як варыянт разгрузачнага дня на 24 гадзіны і карыстацца ім 1--2 разы на тыдзень. Сучаснымі прыхільнікамі такога харчаваньня зьяўляюцца некаторыя біяхакеры, аднак для шырокай аўдыторыі гэты падыход нельга рэкамэндаваць.
 
 \section{Як трымацца правіла? Ідэі і парады}
 
 \subsection{Плыўнасьць і адаптацыя.}
-Часам частата прыёмаў ежы зьяўляецца адно звычкай, але часьцей за ўсё яна абумоўленая асаблівасьцямі працы нашага страўніка. У нашым страўніку ёсьць мэханарэцэптары, якія рэагуюць на ступень яго расьцяжэньня ежай. Іх адчувальнасьць можа мяняцца. Гэта значыць, што чым большыя аб'ёмы ежы вы зьядаеце, тым лягчэй вам гэта зрабіць без пачуцьця цяжару. Калі пачаць сілкавацца меншымі аб'ёмамі ежы, то адчувальнасьць рэцэптараў павялічваецца, і большы аб'ём ежы выклікае пачуцьцё перапаўненьня страўніка. Дасьледаваньні паказалі, што адаптацыя да зьменаў у аб'ёме порцыі займае ў сярэднім каля 4 тыдняў.
+Часам частата прыёмаў ежы зьяўляецца адно звычкай, але часьцей за ўсё яна абумоўленая асаблівасьцямі працы нашага страўніка. У~нашым страўніку ёсьць мэханарэцэптары, якія рэагуюць на ступень яго расьцяжэньня ежай. Іх адчувальнасьць можа мяняцца. Гэта значыць, што чым большыя аб'ёмы ежы вы зьядаеце, тым лягчэй вам гэта зрабіць без пачуцьця цяжару. Калі пачаць сілкавацца меншымі аб'ёмамі ежы, то адчувальнасьць рэцэптараў павялічваецца, і большы аб'ём ежы выклікае пачуцьцё перапаўненьня страўніка. Дасьледаваньні паказалі, што адаптацыя да зьменаў у~аб'ёме порцыі займае ў~сярэднім каля 4 тыдняў.
 
-Рэальнага перарасьцяжэньня страўніка няма. Мэханізм такі ж, як пры адмове ад солі, – спачатку ўсё становіцца прэсным, але праз пару тыдняў адчувальнасьць смакавых рэцэптараў аднаўляецца, і вы зноў паўнавартасна адчуваеце ўсе смакі. Ня трэба баяцца «расьцягнуць» страўнік, вы ж не баіцеся расьцягнуць свой мачавы пухір? Страўнік – гэта цягліцавы орган, ён можа павялічваць свой аб'ём у 4-5 разоў і вяртацца ў норму, гэтая ўласьцівасьць нам і патрэбная, каб мы маглі зьесьці шмат за адзін прыём ежы.
+Рэальнага перарасьцяжэньня страўніка няма. Мэханізм такі ж, як пры адмове ад солі,~--- спачатку ўсё становіцца прэсным, але праз пару тыдняў адчувальнасьць смакавых рэцэптараў аднаўляецца, і вы зноў паўнавартасна адчуваеце ўсе смакі. Ня трэба баяцца «расьцягнуць» страўнік, вы ж не баіцеся расьцягнуць свой мачавы пухір? Страўнік~--- гэта цягліцавы орган, ён можа павялічваць свой аб'ём у~4--5 разоў і вяртацца ў~норму, гэтая ўласьцівасьць нам і патрэбная, каб мы маглі зьесьці шмат за адзін прыём ежы.
 
 \subsection{Варыятыўнасьць.}
-Зусім неабавязкова прытрымлівацца строга фіксаванай колькасьці прыёмаў ежы. Калі ў вас быў інтэнсіўны дзень трэніровак, можна зьесьці больш. А калі гэта дзень зь нізкай фізычнай актыўнасьцю, то можна прапусьціць прыём ежы.
+Зусім неабавязкова прытрымлівацца строга фіксаванай колькасьці прыёмаў ежы. Калі ў~вас быў інтэнсіўны дзень трэніровак, можна зьесьці больш. А~калі гэта дзень зь нізкай фізычнай актыўнасьцю, то можна прапусьціць прыём ежы.
 
-Дрымотнасьць пасьля ежы зьвязаная або з паабедзенным зьніжэньнем картызолу, або зь вялікай колькасьцю вугляводаў. У першым выпадку можна абедаць пазьней, а ў другім – дадаць больш бялку ў іншы прыём ежы.
+\tipbox{Дрымотнасьць пасьля ежы зьвязаная або з~паабедзенным зьніжэньнем картызолу, або зь вялікай колькасьцю вугляводаў. У~першым выпадку можна абедаць пазьней, а~ў другім~--- дадаць больш бялку ў~іншы прыём ежы.}
 
 \subsection{Яда не для настрою.}
 Часам людзі пераходзяць на больш частае харчаваньне дзеля таго, каб падняць сабе настрой ежай. Але важна разумець, што такі падыход небясьпечны і спробы «ўзбадзёрыцца ежай» могуць прывесьці да парушэньня харчовых паводзінаў і іншым праблемаў са здароўем. Стымуляцыя настрою ежай можа толькі разгайдаць нашыя «цукровыя арэлі», разбалянсаваўшы настрой.
 
 \subsection{Цяжар пасьля сытнай ежы.}
-Цяжар пасьля ежы мае некалькі прычынаў. Першая – гэта адчувальнасьць мэханарэцэптараў страўніка, пра якую мы ўжо казалі. Другая – гэта высокая хуткасьць яды. Калі сталаваньне вялікае, то зьядаць яго трэба не хутчэй чым за 20 хвілін не сьпяшаючыся. Трэцяя прычына – недастатковае перажоўваньне. Ежу трэба старанна перажоўваць, не глытаць вялікія кавалкі.
+Цяжар пасьля ежы мае некалькі прычынаў. Першая~--- гэта адчувальнасьць мэханарэцэптараў страўніка, пра якую мы ўжо казалі. Другая~--- гэта высокая хуткасьць яды. Калі сталаваньне вялікае, то зьядаць яго трэба не хутчэй чым за 20 хвілін не сьпяшаючыся. Трэцяя прычына~--- недастатковае перажоўваньне. Ежу трэба старанна перажоўваць, не глытаць вялікія кавалкі.
 
 \subsection{Дрымотнасьць пасьля ежы.}
-Часьцей за ўсё дрымотнасьць пасьля ежы зьвязаная або з паабедзенным зьніжэньнем картызолу (час сыесты), або зь вялікай колькасьцю вугляводаў. У першым выпадку можна абедаць пазьней, а ў другім – дадаць больш бялку ў прыём ежы, што не дае такой рэакцыі.
+Часьцей за ўсё дрымотнасьць пасьля ежы зьвязаная або з~паабедзенным зьніжэньнем картызолу (час сыесты), або зь вялікай колькасьцю вугляводаў. У~першым выпадку можна абедаць пазьней, а~ў другім~--- дадаць больш бялку ў~прыём ежы, што не дае такой рэакцыі.
 
 \subsection{Беражыце зубы.}
-Кожны прыём ежы – гэта кіслотная атака на зубы. Старанна палашчыце рот пасьля кожнага прыёму ежы. Зубная эмаль разьмякчаецца, калі кіслотнасьць у роце падае ніжэй за 5,5 pH, патрабуецца да гадзіны часу, каб аднавіць кіслотны балянс. Калі ўзьдзеяньне ежы занадта частае і перадусім утрымлівае камбінацыі кіслата + цукар (сокі ці ахаладжальныя напоі), то натуральная абарона сьліны не працуе. Памятайце, што адразу пасьля прыёму ежы (асабліва садавіны) нельга чысьціць зубы!
+Кожны прыём ежы~--- гэта кіслотная атака на зубы. Старанна палашчыце рот пасьля кожнага прыёму ежы. Зубная эмаль разьмякчаецца, калі кіслотнасьць у~роце падае ніжэй за 5{,}5\,pH, патрабуецца да гадзіны часу, каб аднавіць кіслотны балянс. Калі ўзьдзеяньне ежы занадта частае і перадусім утрымлівае камбінацыі кіслата + цукар (сокі ці ахаладжальныя напоі), то натуральная абарона сьліны не працуе. Памятайце, што адразу пасьля прыёму ежы (асабліва садавіны) нельга чысьціць зубы!
 
 \subsection{Вы ня страціце цяглічную масу.}
-Паврдле дасьледаваньняў, атлеты выдатна набіраюць масу нават у вузкім харчовым вакне і з двума прыёмамі ежы за дзень.
+Паводле дасьледаваньняў, атлеты выдатна набіраюць масу нават у~вузкім харчовым вакне і з~двума прыёмамі ежы за дзень.
 
 \subsection{Меней думайце пра ежу і эканомце сілы.}
-Меншая колькасьць прыёмаў ежы дае вам куды больш гнуткасьці (бо ня трэба плянаваць 5-6 прыёмаў ежы), менш мыцьця талерак, кантэйнэраў, думак, калі б і дзе паесьці. Чым меней вы думаеце аб ежы, тым лепей для вас.
+Меншая колькасьць прыёмаў ежы дае вам куды больш гнуткасьці (бо ня трэба плянаваць 5--6 прыёмаў ежы), менш мыцьця талерак, кантэйнэраў, думак, калі б і дзе паесьці. Чым меней вы думаеце аб ежы, тым лепей для вас.
 
 \subsection{Ежце больш сур'ёзна.}
 Скарачаючы колькасьць прыёмаў ежы, не забывайце аб разнастайнасьці. Сьмела ўключайце і салату, і садавіну, і гарэхі да гарбаты, рабіце вашу ежу разнастайнай і складанай. Памятайце пра тое, што чым менш разоў вы ясьцё, тым больш старанна трэба есьці, каб ня думаць пра ежу да наступнага сталаваньня.
 
 \subsection{Дзеці і дробавае харчаваньне.}
-Дзецям, старэйшым за паўтара году, харчаваньне часьцейшае за 4 разы на дзень не патрэбнае. Часта бацькі спрабуюць зрабіць ім перакусы, падсоўваючы то сушкі, «каб зубы лепш рэзаліся», то сок, «каб не абязводзіўся», то проста цукеркі – «парадаваць». Пры гэтым суцяшаюць сябе думкамі, што «дзеці растуць», таму ўсё сыдзе ў рост. Няма надзейных навуковых доказаў, што перакусы ў дзяцей паляпшаюць паказчыкі іх здароўя (пры 4-разовым паўнацэнным харчаваньні). Дзеці, якія часьцей  перакусваюць, спажываюць больш калёрыяў, чым за базавыя прыёмы ежы.
+Дзецям, старэйшым за паўтара году, харчаваньне часьцейшае за 4 разы на дзень не патрэбнае. Часта бацькі спрабуюць зрабіць ім перакусы, падсоўваючы то сушкі, «каб зубы лепш рэзаліся», то сок, «каб не абязводзіўся», то проста цукеркі~--- «парадаваць». Пры гэтым суцяшаюць сябе думкамі, што «дзеці растуць», таму ўсё сыдзе ў~рост. Няма надзейных навуковых доказаў, што перакусы ў~дзяцей паляпшаюць паказчыкі іх здароўя (пры 4-разовым паўнацэнным харчаваньні). Дзеці, якія часьцей  перакусваюць, спажываюць больш калёрыяў, чым за базавыя прыёмы ежы.
