--- a/nutrition/intro.tex
+++ b/nutrition/intro.tex
@@ -1,29 +1,29 @@
-\chapter*{Уступ}
+\chapter*[Уступ]{Уступ}
+\addcontentsline{toc}{chapter}{Уступ}
 
-Вытокі гэтае кнігі — у адукацыйным курсе, які я вяду для слухачоў з 2014 году. У той час, калі я яшчэ выкладаў у мэдычным унівэрсытэце, мяне папрасілі выступіць зь лекцыямі аб навуковых падставах здаровага харчаваньня, разьвеяць міты й страхі, акрэсьліць унівэрсальныя правілы харчаваньня. Спачатку гэта былі заняткі ў групах, затым навучальны анлайн-курс, які прайшлі тысячы людзей. З кожнай групай мы разьбіралі розныя аспэкты харчаваньня ды іх практычнае ўкараненьне ў абыдзённае жыцьцё. Натуральна, сытуацыя кожнага чалавека ўнікальная, аднак ёсьць і падставовыя правілы, агульныя для ўсіх. 
+Вытокі гэтае кнігі~--- у~адукацыйным курсе, які я вяду для слухачоў з~2014 году. У~той час, калі я яшчэ выкладаў у~мэдычным унівэрсытэце, мяне папрасілі выступіць зь лекцыямі аб навуковых падставах здаровага харчаваньня, разьвеяць міты й~страхі, акрэсьліць унівэрсальныя правілы харчаваньня. Спачатку гэта былі заняткі ў~групах, затым навучальны анлайн-курс, які прайшлі тысячы людзей. З~кожнай групай мы разьбіралі розныя аспэкты харчаваньня ды іх практычнае ўкараненьне ў~абыдзённае жыцьцё. Натуральна, сытуацыя кожнага чалавека ўнікальная, аднак ёсьць і падставовыя правілы, агульныя для ўсіх.
 
-Працуючы з рознымі людзьмі, лекуючы розныя хваробы, я бачу, што падмурак індывідуальнай дыеты – унівэрсальныя правілы харчаваньня. Усьведамленьне і ўкараненьне ў жыцьцё гэтых правілаў дапамагае кожнаму чалавеку стварыць на іх падставе свае звычкі, якія стануць грунтам пляну харчаваньня.
+Працуючы з~рознымі людзьмі, лекуючы розныя хваробы, я бачу, што падмурак індывідуальнай дыеты~--- унівэрсальныя правілы харчаваньня. Усьведамленьне і ўкараненьне ў~жыцьцё гэтых правілаў дапамагае кожнаму чалавеку стварыць на іх падставе свае звычкі, якія стануць грунтам пляну харчаваньня.
 
-У гэтай кнізе я хачу расказаць вам пра два найважнейшыя аспэкты харчаваньня — рэжым харчаваньня (калі есьці) і прадукты харчаваньня (што есьці) — і навучыць імі карыстацца ў абыдзённым жыцьці. Вядома, ёсьць яшчэ безьліч іншых пытаньняў, якія датычаць псыхалёгіі харчаваньня, харчаваньня ў час хваробаў і мноства іншых цікавых ды істотных тэмаў, аднак мы вернемся да іх пазьней. Кансультуючы кліентаў і выкладаючы на курсе здаровага харчаваньня, я склаў шэраг унівэрсальных правілаў, якія кожны чалавек можа ўкараніць у сваё жыцьцё й атрымаць ад гэтага плён. У кнізе 12 правілаў рэжыму харчаваньня і 12 правілаў выбару прадуктаў. Крытэры правілаў — навуковая інфармацыя ды эмпірычныя веды (традыцыі розных культур і народаў), кожная парада выпрабаваная тысячагадовым чалавечым досьведам і пацьверджаная навуковымі дасьледзінамі. Кожнае правіла мае розныя ступені практыкі, вы можаце пачынаць з лёгкага варыянту й рухацца ў бок складанага.
+У гэтай кнізе я хачу расказаць вам пра два найважнейшыя аспэкты харчаваньня~--- \textbf{рэжым харчаваньня} (калі есьці) і \textbf{прадукты харчаваньня} (што есьці)~--- і навучыць імі карыстацца ў~абыдзённым жыцьці. Вядома, ёсьць яшчэ безьліч іншых пытаньняў, якія датычаць псыхалёгіі харчаваньня, харчаваньня ў~час хваробаў і мноства іншых цікавых ды істотных тэмаў, аднак мы вернемся да іх пазьней. Кансультуючы кліентаў і выкладаючы на курсе здаровага харчаваньня, я склаў шэраг унівэрсальных правілаў, якія кожны чалавек можа ўкараніць у~сваё жыцьцё й~атрымаць ад гэтага плён. У~кнізе 12 правілаў рэжыму харчаваньня і 12 правілаў выбару прадуктаў. Крытэры правілаў~--- навуковая інфармацыя ды эмпірычныя веды (традыцыі розных культур і народаў), кожная парада выпрабаваная тысячагадовым чалавечым досьведам і пацьверджаная навуковымі дасьледзінамі. Кожнае правіла мае розныя ступені практыкі, вы можаце пачынаць з~лёгкага варыянту й~рухацца ў~бок складанага.
 
-Цяпер у дыеталёгіі выходзіць безьліч размаітых кніг, але да кансэнсусу яшчэ далёка. Адныя выданьні павялічваюць колькасьць дыеталягічных мітаў, іншыя гэтыя міты разьвейваюць. Нехта спасылаецца на асабісты досьвед, хтосьці заклікае яго ігнараваць і абапірацца адно на доказную мэдыцыну. А вось трэція даводзяць, што большасьць навуковых дасьледзінаў у гэтай галіне фундуецца харчовымі вытворцамі, дый апроч іх багата хто яшчэ зацікаўлены ў лекаваньні, а не ў прафіляктыцы захворваньняў. Чацьвертыя факусуюцца толькі на асабовых адметнасьцях і падборы індывідуальнага харчаваньня, пятыя раяць кінуць усё гэта і есьці інтуітыўна.
+Цяпер у~дыеталёгіі выходзіць безьліч размаітых кніг, але да кансэнсусу яшчэ далёка. Адныя выданьні павялічваюць колькасьць дыеталягічных мітаў, іншыя гэтыя міты разьвейваюць. Нехта спасылаецца на асабісты досьвед, хтосьці заклікае яго ігнараваць і абапірацца адно на доказную мэдыцыну. А~вось трэція даводзяць, што большасьць навуковых дасьледзінаў у~гэтай галіне фундуецца харчовымі вытворцамі, дый апроч іх багата хто яшчэ зацікаўлены ў~лекаваньні, а~не ў~прафіляктыцы захворваньняў. Чацьвертыя факусуюцца толькі на асабовых адметнасьцях і падборы індывідуальнага харчаваньня, пятыя раяць кінуць усё гэта і есьці інтуітыўна.
 
-Усё гэта нагадвае індыйскую прыпавесьць пра слана й сьляпых мудрацоў. Аднойчы ў горад прывезьлі слана, і кожны мудрэц пачаў яго абмацваць. Першы памацаў хобат і сказаў, што слон – гэта зьмяя, другі памацаў вуха і сказаў, што слон – гэта махала, трэці – нагу і вырашыў, што слон – гэта калёна, чацьверты схапіў хвост і сказаў, што слон – гэта кутас. Хто зь іх мае рацыю? Кожны кажа слушна й няслушна адначасова.
+Усё гэта нагадвае індыйскую прыпавесьць пра слана й~сьляпых мудрацоў. \emph{Аднойчы ў~горад прывезьлі слана, і кожны мудрэц пачаў яго абмацваць. Першы памацаў хобат і сказаў, што слон~--- гэта зьмяя, другі памацаў вуха і сказаў, што слон~--- гэта махала, трэці~--- нагу і вырашыў, што слон~--- гэта калёна, чацьверты схапіў хвост і сказаў, што слон~--- гэта кутас. Хто зь іх мае рацыю? Кожны кажа слушна й~няслушна адначасова.}
 
-Таму варта прытрымлівацца залатой сярэдзіны, беручы пад увагу і навуковыя рады, і традыцыйнае харчаваньне, і свае асабовыя адметнасьці й перавагі. Праз гэта я й вырашыў напісаць кнігу ў выглядзе асобных разьдзелаў, кожны зь якіх зьяўляецца інструмэнтам, правілам для самастойнага прыманьня харчовых рашэньняў. Кожнае правіла гнуткае, любы чалавек можа самастойна яго карыстаць і ўкараняць у свой лад жыцьця. На жаль, шматлікія плыні ў дыеталёгіі ўяўляюць зь сябе радыкальныя скрайнасьці, але ёсьць і сярэдзінны шлях, які дазволіць вам плённа карыстацца рознымі стратэгіямі. Мы можаце атрымліваць карысьць як з калярыйнай ежы, так і з голаду, як з тлушчу, так і з вугляводаў! Прынцып сярэдзіннага, або залатога, шляху — гэта той стыль харчаваньня, які вам зручны, задавальняльны і карысны для здароўя. І гэта рэальна бяз скрайнасьцяў і фанатызму.
+Таму варта прытрымлівацца залатой сярэдзіны, беручы пад увагу і навуковыя рады, і традыцыйнае харчаваньне, і свае асабовыя адметнасьці й~перавагі. Праз гэта я й~вырашыў напісаць кнігу ў~выглядзе асобных разьдзелаў, кожны зь якіх зьяўляецца інструмэнтам, правілам для самастойнага прыманьня харчовых рашэньняў. \emph{Кожнае правіла гнуткае,} любы чалавек можа самастойна яго карыстаць і ўкараняць у~свой лад жыцьця. На жаль, шматлікія плыні ў~дыеталёгіі ўяўляюць зь сябе радыкальныя скрайнасьці, але ёсьць і сярэдзінны шлях, які дазволіць вам плённа карыстацца рознымі стратэгіямі. Мы можаце атрымліваць карысьць як з~калярыйнай ежы, так і з~голаду, як з~тлушчу, так і з~вугляводаў! Прынцып сярэдзіннага, або залатога, шляху~--- гэта той стыль харчаваньня, які вам зручны, задавальняльны і карысны для здароўя. І~гэта рэальна бяз скрайнасьцяў і фанатызму.
 
-Кожная з 24 частак пабудаваная паводле аднаго прынцыпу: спачатку мы разьбіраем гісторыю пытаньня, даведваемся, як елі людзі раней, да чаго адаптаваны наш арганізм і што зьмянілася цяпер. Затым мы коратка разьбяромся, як менавіта гэтае харчовае правіла ўплывае на наша здароўе. Вы даведаецеся, што прадукты і рэжым харчаваньня моцна ўплываюць на наш арганізм на ўсіх узроўнях. Яны ўплываюць на нэўрахімію мозгу, спрыяючы выпрацоўцы звычак і прыхільнасьцяў, на працу гармонаў і адчувальнасьць тканін да іх, на працу імуннай сыстэмы, на актыўнасьць генаў і шматлікае іншае. Многія з гэтых эфэктаў праяўляюцца не адразу, а праз доўгія гады. У трэцяй частцы кожнага разьдзелу – кароткая фармулёўка харчовага правіла і ўзроўні яго складанасьці, а пасьля гэтага – набор парадаў і ідэй для яго больш пасьпяховага ажыцьцяўленьня. Вы можаце пачаць чытаньне зь любой часткі – бо кожнае правіла працуе, нават калі вы карыстаецеся ім асобна. Ды лепей, калі вы будзеце чытаць па адным разьдзеле ў дзень і выкарыстоўваць прачытанае на практыцы: так чытаньне кнігі зойме ў вас амаль месяц, за які вы набудзеце шмат простых і карысных харчовых звычак.
+Кожная з~24 частак пабудаваная паводле аднаго прынцыпу: спачатку мы разьбіраем гісторыю пытаньня, даведваемся, як елі людзі раней, да чаго адаптаваны наш арганізм і што зьмянілася цяпер. Затым мы коратка разьбяромся, як менавіта гэтае харчовае правіла ўплывае на наша здароўе. Вы даведаецеся, што прадукты і рэжым харчаваньня моцна ўплываюць на наш арганізм на ўсіх узроўнях. Яны ўплываюць на нэўрахімію мозгу, спрыяючы выпрацоўцы звычак і прыхільнасьцяў, на працу гармонаў і адчувальнасьць тканін да іх, на працу імуннай сыстэмы, на актыўнасьць генаў і шматлікае іншае. Многія з~гэтых эфэктаў праяўляюцца не адразу, а~праз доўгія гады. У~трэцяй частцы кожнага разьдзелу~--- кароткая фармулёўка харчовага правіла і ўзроўні яго складанасьці, а~пасьля гэтага~--- набор парадаў і ідэй для яго больш пасьпяховага ажыцьцяўленьня. Вы можаце пачаць чытаньне зь любой часткі~--- бо кожнае правіла працуе, нават калі вы карыстаецеся ім асобна. Ды лепей, калі вы будзеце чытаць па адным разьдзеле ў~дзень і выкарыстоўваць прачытанае на практыцы: так чытаньне кнігі зойме ў~вас амаль месяц, за які вы набудзеце шмат простых і карысных харчовых звычак.
 
-Здаровыя харчовыя звычкі – гэта ключ да даўгалецьця. Няхай зьмены будуць невялікімі, але іх моц – у штодзённым паўторы, у назапашвальным эфэкце! Бо шматлікія сучасныя хваробы, такія як сардэчна-сасудзістыя, атлусьценьне, рак, нэўрадэгенэратыўныя захворваньні й само па сабе старэньне не ўзьнікаюць за адзін дзень, а разьвіваюцца працяглы пэрыяд. Таму важна думаць пра сваё харчаваньне ў доўгатэрміновай пэрспэктыве, бо нашае жыцьцё – гэта ня спрынт «схуднець да лета», а маратон «быць здаровым ды энэргічным доўгія гады і прадухіліць раньняе старэньне». Усе дыеты падобныя тым, што працуюць у кароткатэрміновай пэрспэктыве і правальваюцца ў доўгатэрміновай. Чаму? Таму што правільнае харчаваньне – гэта лад жыцьця. Мы будзем гаварыць і пра тое, як уплываюць на наш мэтабалізм стрэс, сьвятло, тэмпэратура, фізычная актыўнасьць, нават настрой. Так, вы пачулі слушна – радасьць сапраўды спальвае тлушч! Калі вы думаеце аб укараненьні новай харчовай звычкі, падумайце, ці зможаце вы прытрымлівацца яе ўвесь час? Калі не, то вам лепей узяць плянку крыху ніжэй – няма сэнсу ў тым, каб не ўжываць цукар на працягу тыдня, а потым сарвацца. А вось калі ўвесьці звычку ўстрымлівацца ад салодкага хаця б раз на два дні, то ўжо праз год гэта дабратворна адаб'ецца на вашым здароўі.
+Здаровыя харчовыя звычкі~--- гэта ключ да даўгалецьця. Няхай зьмены будуць невялікімі, але іх моц~--- у~штодзённым паўторы, у~назапашвальным эфэкце! Бо шматлікія сучасныя хваробы, такія як сардэчна-сасудзістыя, атлусьценьне, рак, нэўрадэгенэратыўныя захворваньні й~само па сабе старэньне не ўзьнікаюць за адзін дзень, а~разьвіваюцца працяглы пэрыяд. Таму важна думаць пра сваё харчаваньне ў~доўгатэрміновай пэрспэктыве, бо нашае жыцьцё~--- гэта ня спрынт «схуднець да лета», а~маратон «быць здаровым ды энэргічным доўгія гады і прадухіліць раньняе старэньне». Усе дыеты падобныя тым, што працуюць у~кароткатэрміновай пэрспэктыве і правальваюцца ў~доўгатэрміновай. Чаму? Таму што правільнае харчаваньне~--- гэта лад жыцьця. Мы будзем гаварыць і пра тое, як уплываюць на наш мэтабалізм стрэс, сьвятло, тэмпэратура, фізычная актыўнасьць, нават настрой. Так, вы пачулі слушна~--- радасьць сапраўды спальвае тлушч! Калі вы думаеце аб укараненьні новай харчовай звычкі, падумайце, ці зможаце вы прытрымлівацца яе ўвесь час? Калі не, то вам лепей узяць плянку крыху ніжэй~--- няма сэнсу ў~тым, каб не ўжываць цукар на працягу тыдня, а~потым сарвацца. А~вось калі ўвесьці звычку ўстрымлівацца ад салодкага хаця б раз на два дні, то ўжо праз год гэта дабратворна адаб'ецца на вашым здароўі.
 
-Кожны дзейсны інструмэнт уплыву на здароўе мае й пабочныя эфэкты. Яда не выключэньне. Сёньня існуюць дзьве супрацьлеглыя тэндэнцыі – харчовая залежнасьць, пераяданьне і артарэксія (1). 
-
-Таму перадусім я хачу даць вам некалькі правілаў тэхнікі бясьпекі.
-
-1. Вашае здароўе – найвышэйшы прыярытэт, таму сумнявайцеся ў любой інфармацыі, у тым ліку і ў той, якую даю я. Памятайце, што агульныя правілы ў вашым канкрэтным выпадку могуць мець індывідуальныя нюансы. Стаўцеся да інфармацыі як дасьледчык – экспэрымэнтуйце й прымайце ўзважанае рашэньне.
-2.  Ня ўсё будзе зразумела й магчыма зрабіць зь першага разу. Гэта нармальна, вучыцеся на сваіх памылках, рабіце высновы, знаходзьце свае слабыя месцы. Гэта дазволіць вам больш эфэктыўна дзейнічаць у будучыні. Кепская не памылка, а тое, што вы нічому не навучыліся.
-3.  Пачуцьцё гумару. Стаўцеся да ўсяго прасьцей і не забывайце пасьмяяцца, у тым ліку і зь сябе. Калі вам ня сьмешна, дык вы ўсталі на шлях, што вядзе да парушэньняў харчовых паводзінаў. Вы заўсёды ўсё можаце зьесьці, ежа – гэта выдатная крыніца энэргіі, а ня зло. Проста трэба акрэсьліць зь ежай межы для вашага агульнага дабра.
-4.  Ня ўлазьце ў спрэчкі й наогул будзьце партызанам у пляне зьменаў харчаваньня, але дапамагайце тым, хто шукае дапамогі. Многія людзі і аўтары будуць пераконваць вас, што толькі іх схэма харчаваньня – адзіная слушная ў сьвеце. Памятайце, што існуе мноства варыяцый здаровага харчаваньня, і ваша мэта – знайсьці такую для сябе асабіста. Устрымлівайцеся ад маральнай ацэнкі людзей паводле таго, што яны ядуць. Не лічыце сябе лепшым за іншых, калі ясьцё правільна, – гэта артарэксія. Вы асабіста ды іншыя людзі ня лепшыя й ня горшыя праз розны зьмест талерак.
-5.  Здаровае харчаваньне – гэта ня проста ежа, а стыль жыцьця. Гэта стравы зь дзяцінства, гэта хатнія рытуалы, гэта новыя месцы, гэта прыемная кампанія сяброў, гэта тое, што прыносіць вам глыбокае задавальненьне й радасьць ад жыцьця. Нясмачная ежа аніяк ня можа быць здаровай.
-6.  Знайдзіце балянс паміж гнуткасьцю ды стабільнасьцю. Выпрацоўвайце правілы й прынцыпы, а не прывязвайцеся да пэўных прадуктаў ці рэцэптаў. Але адначасова з гэтым напрацуйце смачныя рэцэпты з прадуктамі, якія заўсёды ёсьць у вас пад рукой. Дынамічна зьмяняйце рацыён у залежнасьці ад сэзону, фізычнай актыўнасьці і запатрабаваньняў арганізму.
-7.  Здаровае харчаваньне пачынаецца не з панядзелка, а са сьняданку. Паспрабуйце не мяняць рэзка свой рацыён, дзейнічайце плаўна. Нам цяжка адначасова ўкараняць больш за тры звычкі, хоць канчатковае іх высьпяваньне ў мозгу займае да трох месяцаў! А перагрузка адно ўзмацняе стрэс і рызыку зрыву. Памятайце пра этапы зьменаў, пра абмежаванасьць сілы волі, сілу звычкі й важнасьць малых, але штодзённых дзеяў. Дзейнічайце мякка, але настойліва. Кожны прыём ежы – гэта магчымасьць трэнаваньня для выпрацоўкі новых, карысных звычак.
+Кожны дзейсны інструмэнт уплыву на здароўе мае й~пабочныя эфэкты. Яда не выключэньне. Сёньня існуюць дзьве супрацьлеглыя тэндэнцыі~--- харчовая залежнасьць, пераяданьне і артарэксія\footnote{Артарэксія~--- разладжэньне прыёму ежы, што характарызуецца дакучлівым імкненьнем да «здаровага і правільнага харчаваньня».~--- \emph{Аўтарскі нататак.}}. Таму перадусім я хачу даць вам некалькі правілаў \textbf{тэхнікі бясьпекі}.
+\begin{enumerate}[itemindent=3em,labelwidth=1.5em,leftmargin=0pt,nosep]
+  \item Вашае здароўе~--- найвышэйшы прыярытэт, таму сумнявайцеся ў~любой інфармацыі, у~тым ліку і ў~той, якую даю я. Памятайце, што агульныя правілы ў~вашым канкрэтным выпадку могуць мець індывідуальныя нюансы. Стаўцеся да інфармацыі як дасьледчык~--- экспэрымэнтуйце й~прымайце ўзважанае рашэньне.
+  \item Ня ўсё будзе зразумела й~магчыма зрабіць зь першага разу. Гэта нармальна, вучыцеся на сваіх памылках, рабіце высновы, знаходзьце свае слабыя месцы. Гэта дазволіць вам больш эфэктыўна дзейнічаць у~будучыні. Кепская не памылка, а~тое, што вы нічому не навучыліся.
+  \item Пачуцьцё гумару. Стаўцеся да ўсяго прасьцей і не забывайце пасьмяяцца, у~тым ліку і зь сябе. Калі вам ня сьмешна, дык вы ўсталі на шлях, што вядзе да парушэньняў харчовых паводзінаў. Вы заўсёды ўсё можаце зьесьці, ежа~--- гэта выдатная крыніца энэргіі, а~ня зло. Проста трэба акрэсьліць зь ежай межы для вашага агульнага дабра.
+  \item Ня ўлазьце ў~спрэчкі й~наогул будзьце партызанам у~пляне зьменаў харчаваньня, але дапамагайце тым, хто шукае дапамогі. Многія людзі і аўтары будуць пераконваць вас, што толькі іх схэма харчаваньня~--- адзіная слушная ў~сьвеце. Памятайце, што існуе мноства варыяцый здаровага харчаваньня, і ваша мэта~--- знайсьці такую для сябе асабіста. Устрымлівайцеся ад маральнай ацэнкі людзей паводле таго, што яны ядуць. Не лічыце сябе лепшым за іншых, калі ясьцё правільна,~--- гэта артарэксія. Вы асабіста ды іншыя людзі ня лепшыя й~ня горшыя праз розны зьмест талерак.
+  \item Здаровае харчаваньне~--- гэта ня проста ежа, а~стыль жыцьця. Гэта стравы зь дзяцінства, гэта хатнія рытуалы, гэта новыя месцы, гэта прыемная кампанія сяброў, гэта тое, што прыносіць вам глыбокае задавальненьне й~радасьць ад жыцьця. Нясмачная ежа аніяк ня можа быць здаровай.
+  \item Знайдзіце балянс паміж гнуткасьцю ды стабільнасьцю. Выпрацоўвайце правілы й~прынцыпы, а~не прывязвайцеся да пэўных прадуктаў ці рэцэптаў. Але адначасова з~гэтым напрацуйце смачныя рэцэпты з~прадуктамі, якія заўсёды ёсьць у~вас пад рукой. Дынамічна зьмяняйце рацыён у~залежнасьці ад сэзону, фізычнай актыўнасьці і запатрабаваньняў арганізму.
+  \item Здаровае харчаваньне пачынаецца не з~панядзелка, а~са сьняданку. Паспрабуйце не мяняць рэзка свой рацыён, дзейнічайце плаўна. Нам цяжка адначасова ўкараняць больш за тры звычкі, хоць канчатковае іх высьпяваньне ў~мозгу займае да трох месяцаў! А~перагрузка адно ўзмацняе стрэс і рызыку зрыву. Памятайце пра этапы зьменаў, пра абмежаванасьць сілы волі, сілу звычкі й~важнасьць малых, але штодзённых дзеяў. Дзейнічайце мякка, але настойліва. Кожны прыём ежы~--- гэта магчымасьць трэнаваньня для выпрацоўкі новых, карысных звычак.
+\end{enumerate}
