--- a/nutrition/chapter14.tex
+++ b/nutrition/chapter14.tex
@@ -1,95 +1,97 @@
+
 \chapter{Калярыйная і нутрыентная шчыльнасьць ежы}
 
-Правіла шчыльнасьці заключаецца ў тым, каб выбіраць сабе ежу зь нізкай удзельнай калярыйнай шчыльнасьцю і з высокай шчыльнасьцю нутрыентаў (клятчатка, вітаміны, антыаксыданты, макра- і мікраэлемэнты). Калярыйная шчыльнасьць (энэргетычная шчыльнасьць) – гэта колькасьць калёрыяў на грам прадукту, чым вышэйшвя шчыльнасьць, тым меншы аб'ём прадукту і вышэйшая колькасьць калёрыяў у ім. Так, напрыклад, гародніна ўтрымоўвае 30 ккал на 100 грамаў прадукту, а вось чакалядка – да 550 ккал на 100 грамаў прадукту.
+Правіла шчыльнасьці заключаецца ў~тым, каб выбіраць сабе ежу зь нізкай удзельнай калярыйнай шчыльнасьцю і з~высокай шчыльнасьцю нутрыентаў (клятчатка, вітаміны, антыаксыданты, макра- і мікраэлемэнты). Калярыйная шчыльнасьць (энэргетычная шчыльнасьць)~--- гэта колькасьць калёрыяў на грам прадукту, чым вышэйшая шчыльнасьць, тым меншы аб'ём прадукту і вышэйшая колькасьць калёрыяў у~ім. Так, напрыклад, гародніна ўтрымоўвае 30\,ккал на 100 грамаў прадукту, а~вось чакалядка~--- да 550\,ккал на 100 грамаў прадукту.
 
-Можна ўявіць сабе сытуацыю і па-іншаму: так, 400 ккал – гэта 100 грамаў чакаляднага батончыка, амаль 400 грамаў мяса і амаль паўтара кіляграмы брокалі. Менавіта таму сьцьвярджэньні аб тым, што калёрыі цалкам ідэнтычныя, няслушныя: бо 400 ккал батончыка і 400 ккал брокалі будуць па-рознаму ўплываць на пачуцьцё голаду і сытасьці, а гэта шмат у чым вызначае вашы харчовыя паводзіны. Чым вышэйшая калярыйная шчыльнасьць, тым вышэйшая ступень ачысткі прадукту і тым меншая яго нутрыентная шчыльнасьць. Ежце як кароль – толькі багатыя прадукты. «Бедныя» прадукты ўтрымліваюць шмат калёрыяў і мала карысных рэчываў. «Багатыя» прадукты ўтрымліваюць мала калёрыяў, але вельмі шмат біялягічна актыўных рэчываў.
+Можна ўявіць сабе сытуацыю і па-іншаму: так, 400\,ккал~--- гэта 100 грамаў чакаляднага батончыка, амаль 400 грамаў мяса і амаль паўтара кіляграмы брокалі. Менавіта таму сьцьвярджэньні аб тым, што калёрыі цалкам ідэнтычныя, няслушныя: бо 400\,ккал батончыка і 400\,ккал брокалі будуць па-рознаму ўплываць на пачуцьцё голаду і сытасьці, а~гэта шмат у~чым вызначае вашы харчовыя паводзіны. Чым вышэйшая калярыйная шчыльнасьць, тым вышэйшая ступень ачысткі прадукту і тым меншая яго нутрыентная шчыльнасьць. Ежце як кароль~--- толькі багатыя прадукты. «Бедныя» прадукты ўтрымліваюць шмат калёрыяў і мала карысных рэчываў. «Багатыя» прадукты ўтрымліваюць мала калёрыяў, але вельмі шмат біялягічна актыўных рэчываў.
 
 \section{Як зьявілася праблема?}
 
-З даўніх часоў у прыродзе чалавек рэдка сустракаўся з багацьцем ежы высокай шчыльнасьці, яна была эпізадычнай ці сэзоннай. Зь цягам часу калярыйная шчыльнасьць ежы пакрысе павялічваецца. Так, узровень тлушчу ў дзікіх жывёл – 5-7% і дасягае 30% у сельскагаспадарчых, тое ж тычыцца многіх расьлінных культураў. Зьяўленьне рафінаваных прадуктаў прывяло да таго, што ежа стала неймаверна калярыйнай, ачыстка прадуктаў прывяла да зьніжэньня іх біялягічнай вартасьці.
+З даўніх часоў у~прыродзе чалавек рэдка сустракаўся з~багацьцем ежы высокай шчыльнасьці, яна была эпізадычнай ці сэзоннай. Зь цягам часу калярыйная шчыльнасьць ежы пакрысе павялічваецца. Так, узровень тлушчу ў~дзікіх жывёл~--- 5--7\,\% і дасягае 30\,\% у~сельскагаспадарчых, тое ж тычыцца многіх расьлінных культураў. Зьяўленьне рафінаваных прадуктаў прывяло да таго, што ежа стала неймаверна калярыйнай, ачыстка прадуктаў прывяла да зьніжэньня іх біялягічнай вартасьці.
 
-Павелічэньне калярыйнай шчыльнасьці часьцей за ўсё суправаджаецца зьніжэньнем нутрыентнай шчыльнасьці ежы (гэта значыць зьмесьціва ў ёй розных некалярыйных, але важных для здароўя прадуктаў, уключаючы клятчатку, вітаміны, антыаксыданты, рэчывы, якія адказваюць за смак і пах, і многае іншае). Таму ежа з высокай калярыйнай шчыльнасьцю, як правіла, бедная на біялягічна актыўныя спалучэньні. Акрамя гэтага, працяглае вырошчваньне ежы на адных і тых жа землях зьнясільвае глебу, зьніжае ўтрыманьне ў ёй шэрагу карысных кампанэнтаў; працяглае захоўваньне і транспарціроўка таксама ўзмацняюць гэты працэс.
+Павелічэньне калярыйнай шчыльнасьці часьцей за ўсё суправаджаецца зьніжэньнем нутрыентнай шчыльнасьці ежы (гэта значыць зьмесьціва ў~ёй розных некалярыйных, але важных для здароўя прадуктаў, уключаючы клятчатку, вітаміны, антыаксыданты, рэчывы, якія адказваюць за смак і пах, і многае іншае). Таму ежа з~высокай калярыйнай шчыльнасьцю, як правіла, бедная на біялягічна актыўныя спалучэньні. Акрамя гэтага, працяглае вырошчваньне ежы на адных і тых жа землях зьнясільвае глебу, зьніжае ўтрыманьне ў~ёй шэрагу карысных кампанэнтаў; працяглае захоўваньне і транспарціроўка таксама ўзмацняюць гэты працэс.
 
-У старажытнасьці некаторымі хваробамі ганарыліся, лічылі іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, бо толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў спалучэньні з маларухомым ладам жыцьця.
+\tipbox{У старажытнасьці некаторымі хваробамі ганарыліся, лічылі іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, бо толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў~спалучэньні з~маларухомым ладам жыцьця.}
 
-Многія «хваробы цывілізацыі», распаўсюджаныя сёньня (алергіі, атлусьценьне, дыябэт, дэпрэсія), у старажытнасьці былі толькі ў некаторых людзей з высокім сацыяльным статусам і даходам, а дакладней – зь няправільным харчаваньнем, гіпадынаміяй і нястрымнасьцю. Больш за тое, некаторымі хваробамі нават ганарыліся, лічачы іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, паколькі толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў спалучэньні з маларухомым ладам жыцьця. Гэта ж датычыцца і цукровага дыябэту другога тыпу, які сустракаўся, як правіла, толькі ў багатых. Алергія першапачаткова таксама была прыкметай заможнасьці. Сянны катар быў «моднай» хваробай эліты. Лекары адразу заўважылі, што хвароба сустракаецца ў багатых, а ў сялян яе не назіралася. Чаму? Багатыя больш пераядалі, елі больш тлустага, мучнога, салодкага, менш рухаліся, таму і часьцей хварэлі. Цяпер сытуацыя поўнасьцю перакулілася. Калярыйная бедная ежа (мучное, тлустае, цукар) стала таннай, а вось "багатыя" прадукты (морапрадукты, зеляніна, якаснае мяса, ягады і гародніна) сталі даражэйшымі.
+Многія «хваробы цывілізацыі», распаўсюджаныя сёньня (алергіі, атлусьценьне, дыябэт, дэпрэсія), у~старажытнасьці былі толькі ў~некаторых людзей з~высокім сацыяльным статусам і даходам, а~дакладней~--- зь няправільным харчаваньнем, гіпадынаміяй і нястрымнасьцю. Больш за тое, некаторымі хваробамі нават ганарыліся, лічачы іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, паколькі толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў~спалучэньні з~маларухомым ладам жыцьця. Гэта ж датычыцца і цукровага дыябэту другога тыпу, які сустракаўся, як правіла, толькі ў~багатых. Алергія першапачаткова таксама была прыкметай заможнасьці. Сянны катар быў «моднай» хваробай эліты. Лекары адразу заўважылі, што хвароба сустракаецца ў~багатых, а~ў сялян яе не назіралася. Чаму? Багатыя больш пераядалі, елі больш тлустага, мучнога, салодкага, менш рухаліся, таму і часьцей хварэлі. Цяпер сытуацыя поўнасьцю перакулілася. Калярыйная бедная ежа (мучное, тлустае, цукар) стала таннай, а~вось "багатыя" прадукты (морапрадукты, зеляніна, якаснае мяса, ягады і гародніна) сталі даражэйшымі.
 
 \section{Як гэта ўплывае на здароўе?}
 
 \subsection{Пераяданьне.}
-Дасьледаваньні паказваюць, што чым вышэйшая калярыйная шчыльнасьць ежы, тым больш ежы чалавек зьядае. Зьніжэньне шчыльнасьці ежы прыводзіць да таго, што чалавек аўтаматычна пачынае есьці менш на 300-400 ккал. Навукоўцы давялі, што тыя, хто есьць больш ежы зь нізкай шчыльнасьцю, маюць меншую вагу і абхоп таліі, павелічэньне калярыйнай шчыльнасьці можа да 56% павялічыць спажываньне калёрыяў, у экспэрымэнтах людзі зьядалі ў сярэднім на 425 ккал больш пры пераходзе на шчыльную сытную ежу.
+Дасьледаваньні паказваюць, што чым вышэйшая калярыйная шчыльнасьць ежы, тым больш ежы чалавек зьядае. Зьніжэньне шчыльнасьці ежы прыводзіць да таго, што чалавек аўтаматычна пачынае есьці менш на 300--400 ккал. Навукоўцы давялі, што тыя, хто есьць больш ежы зь нізкай шчыльнасьцю, маюць меншую вагу і абхоп таліі, павелічэньне калярыйнай шчыльнасьці можа да 56\,\% павялічыць спажываньне калёрыяў, у~экспэрымэнтах людзі зьядалі ў~сярэднім на 425 ккал больш пры пераходзе на шчыльную сытную ежу.
 
 \subsection{Кантроль апэтыту.}
-Чым вышэйшая ўдзельная калярыйная шчыльнасьць, тым менш месца займае гэтая ежа ў страўніку, такім чынам, менш стымулюе мэханарэцэптары страўніка, якія ўспрымаюць ціск на яго сьценкі. Акрамя гэтага, сама шчыльнасьць ежы стымулюе апэтыт. З эвалюцыйнага пункту гледжаньня прадукты з высокай калярыйнай шчыльнасьцю былі рэдкія, таму іх важна было зьесьці і пераўтварыць у тлушчавыя запасы, якія могуць дапамагчы ў будучыні. Расьлінныя прадукты зь нізкай удзельнай калярыйнасьцю былі шырока распаўсюджаныя, таму яны не выклікаюць такога павышэньня апэтыту. Многія сумуюць па выпечцы, але мала хто сумуе па брокалі.
+Чым вышэйшая ўдзельная калярыйная шчыльнасьць, тым менш месца займае гэтая ежа ў~страўніку, такім чынам, менш стымулюе мэханарэцэптары страўніка, якія ўспрымаюць ціск на яго сьценкі. Акрамя гэтага, сама шчыльнасьць ежы стымулюе апэтыт. З~эвалюцыйнага пункту гледжаньня прадукты з~высокай калярыйнай шчыльнасьцю былі рэдкія, таму іх важна было зьесьці і пераўтварыць у~тлушчавыя запасы, якія могуць дапамагчы ў~будучыні. Расьлінныя прадукты зь нізкай удзельнай калярыйнасьцю былі шырока распаўсюджаныя, таму яны не выклікаюць такога павышэньня апэтыту. Многія сумуюць па выпечцы, але мала хто сумуе па брокалі.
 
 \subsection{Забясьпечанасьць вітамінамі і мінэраламі.}
-Многія калярыйныя прадукты бедныя вітамінамі і мікраэлемэнтамі. Сэлекцыя, якая прыводзіць да павелічэньня ўтрыманьня крухмалу і тлушчу, паскарэньня росту, адначасова вядзе і да зьніжэньня ўтрыманьня карысных рэчываў. Чым больш чалавек зьядае шчыльнай ежы, тым менш у яго рацыёне багатых вітамінамі і мінэраламі прадуктаў, што можа прыводзіць да шэрагу дэфіцытных станаў.
+Многія калярыйныя прадукты бедныя вітамінамі і мікраэлемэнтамі. Сэлекцыя, якая прыводзіць да павелічэньня ўтрыманьня крухмалу і тлушчу, паскарэньня росту, адначасова вядзе і да зьніжэньня ўтрыманьня карысных рэчываў. Чым больш чалавек зьядае шчыльнай ежы, тым менш у~яго рацыёне багатых вітамінамі і мінэраламі прадуктаў, што можа прыводзіць да шэрагу дэфіцытных станаў.
 
-Калярыйныя прадукты бедныя вітамінамі і мікраэлемэнтамі. Сэлекцыя, якая прыводзіць да павелічэньня ўтрыманьня крухмалу і тлушчу, паскарэньня росту, адначасова вядзе і да зьніжэньня ўтрыманьня карысных рэчываў.
+\tipbox{Калярыйныя прадукты бедныя вітамінамі і мікраэлемэнтамі. Сэлекцыя, якая прыводзіць да павелічэньня ўтрыманьня крухмалу і тлушчу, паскарэньня росту, адначасова вядзе і да зьніжэньня ўтрыманьня карысных рэчываў.}
 
 \subsection{Удзельная шчыльнасьць вугляводаў і кішачнік.}
-Рэч у тым, што навуковыя дасьледаваньні паказалі: менавіта ўдзельная шчыльнасьць вугляводаў, а не глікемічны індэкс, уплывае на іх дзеяньне. Чым вышэйшая шчыльнасьць, тым мацнейшы яе ўплыў на мікрафлёру і тым мацнейшая запаленчая рэакцыя, незалежна ад агульнай колькасьці вугляводаў. Пасьля прыёму канцэнтраваных вугляводаў узьнікае «мэтабалічная эндатаксэмія» (павелічэньне ўзроўню таксынаў), якая трымаецца да 5 гадзінаў пасьля яды. Гэта выклікае хранічнае запаленьне, што прыводзіць да лептынарэзыстэнтнасьці і парушэньня працы вагусу, зьніжае насычэньне, гнетучы актыўнасьць такіх мэдыятараў насычэньня, як халецыстакінін, пэптыд YY. Даведзена, што харчаваньне "старажытнымі" вугляводамі прыводзіць да зьмены мікрафлёры, зьніжэньня пранікальнасьці кішачніка і памяншэньня выяўнасьці запаленчых зьяваў. Аналягічная колькасьць "сучасных" вугляводаў не аказвае падобнага эфэкту. Чым больш «сучасных» вугляводаў, тым больш неспрыяльнай мікрафлёры як у ротавай поласьці, так і ў тонкім кішачніку, і тым мацнейшы запаленчы статут арганізму.
+Рэч у~тым, што навуковыя дасьледаваньні паказалі: менавіта ўдзельная шчыльнасьць вугляводаў, а~не глікемічны індэкс, уплывае на іх дзеяньне. Чым вышэйшая шчыльнасьць, тым мацнейшы яе ўплыў на мікрафлёру і тым мацнейшая запаленчая рэакцыя, незалежна ад агульнай колькасьці вугляводаў. Пасьля прыёму канцэнтраваных вугляводаў узьнікае «мэтабалічная эндатаксэмія» (павелічэньне ўзроўню таксынаў), якая трымаецца да 5 гадзінаў пасьля яды. Гэта выклікае хранічнае запаленьне, што прыводзіць да лептынарэзыстэнтнасьці і парушэньня працы вагусу, зьніжае насычэньне, гнетучы актыўнасьць такіх мэдыятараў насычэньня, як халецыстакінін, пэптыд YY. Даведзена, што харчаваньне "старажытнымі" вугляводамі прыводзіць да зьмены мікрафлёры, зьніжэньня пранікальнасьці кішачніка і памяншэньня выяўнасьці запаленчых зьяваў. Аналягічная колькасьць "сучасных" вугляводаў не аказвае падобнага эфэкту. Чым больш «сучасных» вугляводаў, тым больш неспрыяльнай мікрафлёры як у~ротавай поласьці, так і ў~тонкім кішачніку, і тым мацнейшы запаленчы статут арганізму.
 
-Чым вышэйшая удзельная калярыйная шчыльнасьць, тым ніжэйшая разнастайнасьць мікрафлёры. Так, узровень Bacteroidetes вышэйшы на дыеце ў 2 Ккал / грамаў, а ўзровень Firmicutes вышэйшы на дыеце ў 4 Ккал / грамаў. Узровень Parabacteroides вышэйшы на дыеце ў 2 Ккал / грамаў, а ўзровень Barnesiella вышэйшы на дыеце ў 4 Ккал / грамаў.
+Чым вышэйшая ўдзельная калярыйная шчыльнасьць, тым ніжэйшая разнастайнасьць мікрафлёры. Так, узровень Bacteroidetes вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Firmicutes вышэйшы на дыеце ў~4\,Ккал/грамаў. Узровень Parabacteroides вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Barnesiella вышэйшы на дыеце ў~4\,Ккал/грамаў.
 
 \section{Асноўныя прынцыпы}
 
-Павялічце долю прадуктаў зь нізкай калярыйнай шчыльнасьцю, то-бок «багатых» прадуктаў, дзе мала калёрыяў. Вы можаце есьці без абмежаваньняў зеляніну, нізкакрухмалістую гародніну, ягады, багавіньне і г. д. Форма прадукту таксама мае значэньне: так, калярыйная шчыльнасьць вінаграду ў пяць разоў меншая, чым разынак. Усе вугляводныя прадукты мы можам умоўна падзяліць на «старажытныя клеткавыя», такія як банан, батат, бурак і морква, гарбуз, капуста і інш. І «сучасныя пазаклеткавыя» вугляводы, куды адносяцца крупы і іх перапрацаваныя вытворныя. Важна ня проста памяншаць вугляводы, а радыкальна памяншаць колькасьць «сучасных пазаклеткавых» (мучное любога паходжаньня, перапрацаваныя крупы) вугляводаў. А вось «старажытныя клеткавыя» вугляводы можна спажываць без істотных асьцярогаў. Правіла калярыйнай шчыльнасьці датычыцца ня толькі расьлінных, але і жывёльных прадуктаў. Параўнайце тлустую марскую рыбу і тлустую сьвініну: тлусты селядзец 248 ккал на 100 грамаў, а вось сьвініна – 491 ккал, розьніца вельмі істотная!
+\subsection{Павялічце долю прадуктаў зь нізкай калярыйнай шчыльнасьцю,} то-бок «багатых» прадуктаў, дзе мала калёрыяў. Вы можаце есьці без абмежаваньняў зеляніну, нізкакрухмалістую гародніну, ягады, багавіньне і г.~д. Форма прадукту таксама мае значэньне: так, калярыйная шчыльнасьць вінаграду ў~пяць разоў меншая, чым разынак. Усе вугляводныя прадукты мы можам умоўна падзяліць на «старажытныя клеткавыя», такія як банан, батат, бурак і морква, гарбуз, капуста і інш. І~«сучасныя пазаклеткавыя» вугляводы, куды адносяцца крупы і іх перапрацаваныя вытворныя. Важна ня проста памяншаць вугляводы, а~радыкальна памяншаць колькасьць «сучасных пазаклеткавых» (мучное любога паходжаньня, перапрацаваныя крупы) вугляводаў. А~вось «старажытныя клеткавыя» вугляводы можна спажываць без істотных асьцярогаў. Правіла калярыйнай шчыльнасьці датычыцца ня толькі расьлінных, але і жывёльных прадуктаў. Параўнайце тлустую марскую рыбу і тлустую сьвініну: тлусты селядзец 248 ккал на 100 грамаў, а~вось сьвініна~--- 491 ккал, розьніца вельмі істотная!
 
-Паменшыце долю прадуктаў з высокай калярыйнай шчыльнасьцю, то-бок «бедных» прадуктаў, у якіх шмат калёрыяў і мала нутрыентаў. Нават проста крупы, якія зьядаюцца асобна, ня будуць здаровым выбарам, абавязкова дадавайце ў прыём ежы больш зеляніны і гародніны, каб калярыйныя прадукты займалі меншую частку талеркі. У першую чаргу гэта мучныя вырабы, кандытарскія, якія зьмяшчаюць шмат цукру і тлушчу.
+\subsection{Паменшыце долю прадуктаў з~высокай калярыйнай шчыльнасьцю,} то-бок «бедных» прадуктаў, у~якіх шмат калёрыяў і мала нутрыентаў. Нават проста крупы, якія зьядаюцца асобна, ня будуць здаровым выбарам, абавязкова дадавайце ў~прыём ежы больш зеляніны і гародніны, каб калярыйныя прадукты займалі меншую частку талеркі. У~першую чаргу гэта мучныя вырабы, кандытарскія, якія зьмяшчаюць шмат цукру і тлушчу.
 
-Усе вугляводныя прадукты мы можам умоўна падзяліць на «старажытныя клеткавыя», такія як банан, батат, бурак і морква, гарбуз, капуста і інш., і «сучасныя пазаклеткавыя» вугляводы, куды адносяцца крупы і іх перапрацаваныя вытворныя.
+\tipbox{Усе вугляводныя прадукты мы можам умоўна падзяліць на «старажытныя клеткавыя», такія як банан, батат, бурак і морква, гарбуз, капуста і інш., і «сучасныя пазаклеткавыя» вугляводы, куды адносяцца крупы і іх перапрацаваныя вытворныя.}
 
-Павялічце долю прадуктаў з высокай нутрыентнай шчыльнасьцю, дзе шмат вітамінаў, антыаксыдантаў, мінэралаў і да т. п. Такія прадукты часта называюць «супэрфудамі». Як мы з вамі ведаем, рабіць дыету на некалькіх, нават вельмі карысных, прадуктах не зусім правільна, але долю такіх прадуктаў варта павялічыць. Для дакладнага вызначэньня дэфіцыту вітамінаў і мінэралаў вы можаце здаць біяхімічныя аналізы крыві, самыя распаўсюджаныя дэфіцыты коратка адлюстраваныя ніжэй. Пад супэрфудамі маюць на ўвазе прадукты, якія ядуцца ў малых колькасьцях і валодаюць высокай удзельнай біялягічнай актыўнасьцю (канцэнтрацыя карыснага на грам прадукту). Пад азначэньне супэрфудаў трапляюць авакада, шпінат, марское багавіньне, гранат, чарніцы, буякі, брокалі, кале і ўсе крыжакветныя, міндаль, какосавы алей, дзікі ласось, аліўкавы алей, зялёная гарбата, какава-бабы, грэцкія гарэхі. Многія з супэрфудаў уяўляюць зь сябе маркетынгавы ход: так, абляпіха нічым не саступае годжы, а шматклеткавае багавіньне карысьнейшае і бясьпечнейшае за сьпіруліну (можа ўтрымоўваць шэраг таксынаў).
+\subsection{Павялічце долю прадуктаў з~высокай нутрыентнай шчыльнасьцю,} дзе шмат вітамінаў, антыаксыдантаў, мінэралаў і да т.~п. Такія прадукты часта называюць «супэрфудамі». Як мы з~вамі ведаем, рабіць дыету на некалькіх, нават вельмі карысных, прадуктах не зусім правільна, але долю такіх прадуктаў варта павялічыць. Для дакладнага вызначэньня дэфіцыту вітамінаў і мінэралаў вы можаце здаць біяхімічныя аналізы крыві, самыя распаўсюджаныя дэфіцыты коратка адлюстраваныя ніжэй. Пад супэрфудамі маюць на ўвазе прадукты, якія ядуцца ў~малых колькасьцях і валодаюць высокай удзельнай біялягічнай актыўнасьцю (канцэнтрацыя карыснага на грам прадукту). Пад азначэньне супэрфудаў трапляюць авакада, шпінат, марское багавіньне, гранат, чарніцы, буякі, брокалі, кале і ўсе крыжакветныя, міндаль, какосавы алей, дзікі ласось, аліўкавы алей, зялёная гарбата, какава-бабы, грэцкія гарэхі. Многія з~супэрфудаў уяўляюць зь сябе маркетынгавы ход: так, абляпіха нічым не саступае годжы, а~шматклеткавае багавіньне карысьнейшае і бясьпечнейшае за сьпіруліну (можа ўтрымоўваць шэраг таксынаў).
 
-Адносна дэфіцыту мікранутрыентаў можна сустрэць розныя вэрсіі, пачынаючы ад той, што «ўся ежа сёньня ўжо ня тая» да «ў ежы ёсьць усё, што трэба». Ісьціна заключаецца ў тым, што нават калі ў ежы ўсё ёсьць, то бываюць індывідуальныя праблемы з засваеньнем неабходных рэчываў. Акрамя гэтага, важна разумець, што ў выпадку ўмеранага дэфіцыту арганізм накіроўвае дэфіцытныя рэчывы на рашэньне галоўных пытаньняў выжываньня, пры гэтым пакутуюць іншыя важныя функцыі. Так, напрыклад, пры ўтоенай жалезадэфіцытнай анэміі эрытрацыты будуць у норме, але вось валасы і энэргічнасьць – не. Аналагічная гісторыя адбываецца і пры дэфіцыце вітаміна D, сэлену, цынку і шэрагу іншых элемэнтаў. Таму важнае харчаваньне багатай нутрыентамі ежай, але, акрамя гэтага, аптымальнае падтрыманьне патрэбных узроўняў розных мікранутрыентаў.
+Адносна дэфіцыту мікранутрыентаў можна сустрэць розныя вэрсіі, пачынаючы ад той, што «ўся ежа сёньня ўжо ня тая» да «ў ежы ёсьць усё, што трэба». Ісьціна заключаецца ў~тым, што нават калі ў~ежы ўсё ёсьць, то бываюць індывідуальныя праблемы з~засваеньнем неабходных рэчываў. Акрамя гэтага, важна разумець, што ў~выпадку ўмеранага дэфіцыту арганізм накіроўвае дэфіцытныя рэчывы на рашэньне галоўных пытаньняў выжываньня, пры гэтым пакутуюць іншыя важныя функцыі. Так, напрыклад, пры ўтоенай жалезадэфіцытнай анэміі эрытрацыты будуць у~норме, але вось валасы і энэргічнасьць~--- не. Аналягічная гісторыя адбываецца і пры дэфіцыце вітаміна D, сэлену, цынку і шэрагу іншых элемэнтаў. Таму важнае харчаваньне багатай нутрыентамі ежай, але, акрамя гэтага, аптымальнае падтрыманьне патрэбных узроўняў розных мікранутрыентаў.
 
 \subsection{Прапорцыі і талерка.}
-Калі ў вас мэта схуднець, то зьмяняйце прапорцыі розных харчовых групаў, павялічваючы ў рацыёне долю прадуктаў зь нізкай удзельнай калярыйнай шчыльнасьцю, а калі набраць вагу – то павялічвайце з высокай шчыльнасьцю.
+Калі ў~вас мэта схуднець, то зьмяняйце прапорцыі розных харчовых групаў, павялічваючы ў~рацыёне долю прадуктаў зь нізкай удзельнай калярыйнай шчыльнасьцю, а~калі набраць вагу~--- то павялічвайце з~высокай шчыльнасьцю.
 
-У прынцыпе, мы можам есьці любыя прадукты, але важна памятаць, што чым вышэйшая яго ўдзельная калярыйная шчыльнасьць, тым меншую колькасьць гэтага прадукту нам варта зьесьці. Пра тое, як есьці менш і атрымліваць больш задавальненьня, я расказваю ў разьдзеле «Смачная ежа». Дадаючы ў свой рацыён больш такіх прадуктаў, мы зможам лягчэй спаталяць пачуцьцё голаду. У сярэднім лічыцца, што агульная вага ежы для дасягненьня сытасьці павінна складаць 1,5-2 кіляграмы пры адэкватнай шчыльнасьці. Таму вам важна зьядаць вялікія, аб'ёмныя порцыі ежы зь нізкай шчыльнасьцю.
+У прынцыпе, мы можам есьці любыя прадукты, але важна памятаць, што чым вышэйшая яго ўдзельная калярыйная шчыльнасьць, тым меншую колькасьць гэтага прадукту нам варта зьесьці. Пра тое, як есьці менш і атрымліваць больш задавальненьня, я расказваю ў~разьдзеле «Смачная ежа». Дадаючы ў~свой рацыён больш такіх прадуктаў, мы зможам лягчэй спаталяць пачуцьцё голаду. У~сярэднім лічыцца, што агульная вага ежы для дасягненьня сытасьці павінна складаць 1,5--2 кіляграмы пры адэкватнай шчыльнасьці. Таму вам важна зьядаць вялікія, аб'ёмныя порцыі ежы зь нізкай шчыльнасьцю.
 
-У катэгорыю супэрфудаў трапляюць авакада, шпінат, марское багавіньне, гранат, чарніцы, буякі, брокалі, кале і ўсе крыжакветныя, мігдал, какосавы алей, дзікі ласось, аліўкавы алей, зялёная гарбата, какава-бабы, грэцкія гарэхі. Многія з супэрфудаў – толькі маркетынгавы ход: так, абляпіха нічым не саступае годжы, а шматклеткавае багавіньне карысьнейшае і бясьпечнейшае за сьпіруліну (можа ўтрымліваць шэраг таксынаў).
+\tipbox{У катэгорыю супэрфудаў трапляюць авакада, шпінат, марское багавіньне, гранат, чарніцы, буякі, брокалі, кале і ўсе крыжакветныя, мігдал, какосавы алей, дзікі ласось, аліўкавы алей, зялёная гарбата, какава-бабы, грэцкія гарэхі. Многія з~супэрфудаў~--- толькі маркетынгавы ход: так, абляпіха нічым не саступае годжы, а~шматклеткавае багавіньне карысьнейшае і бясьпечнейшае за сьпіруліну (можа ўтрымліваць шэраг таксынаў).}
 
 \subsection{Пасьлядоўнасьць прыёму прадуктаў.}
-Варта пачынаць сталаваньне з прадуктаў нізкай удзельнай калярыйнасьці, зьядаючы іх больш (зялёная ліставая гародніна). Затым пераходзіце да прадуктаў сярэдняй калярыйнай шчыльнасьці (мяса, рыба, крухмалістая гародніна) і толькі ў канцы можна (але не абавязкова) зьесьці дэсэрт (гарэхі, ягады і да т.п.).
+Варта пачынаць сталаваньне з~прадуктаў нізкай удзельнай калярыйнасьці, зьядаючы іх больш (зялёная ліставая гародніна). Затым пераходзіце да прадуктаў сярэдняй калярыйнай шчыльнасьці (мяса, рыба, крухмалістая гародніна) і толькі ў~канцы можна (але не абавязкова) зьесьці дэсэрт (гарэхі, ягады і да т.~п.).
 
 \section{Як трымацца правіла? Ідэі і парады}
 
 \subsection{Стоеная зеляніна і гародніна.}
-Вы можаце прыкметна зьменшыць удзельную калярыйную шчыльнасьць страў, калі будзеце больш дадаваць у іх здробненай зеляніны і гародніны, зьмешваючы з асноўнай стравай і паступова павялічваючы прапорцыю. Гэта зьменшыць колькасьць калёрыяў і павялічыць аб'ём стравы, што добра для сытасьці.
+Вы можаце прыкметна зьменшыць удзельную калярыйную шчыльнасьць страў, калі будзеце больш дадаваць у~іх здробненай зеляніны і гародніны, зьмешваючы з~асноўнай стравай і паступова павялічваючы прапорцыю. Гэта зьменшыць колькасьць калёрыяў і павялічыць аб'ём стравы, што добра для сытасьці.
 
-\subsection{Прадукты з адмоўнай калярыйнасьцю.}
-Існуе міт пра прадукты з адмоўнай калярыйнасьцю, нібыта на засваеньне якіх арганізм выдаткуе больш энэргіі, чым яны даюць. У цэлым на засваеньне (тэрмічны эфэкт ежы) выдаткуецца ня больш за 5-10%.
+\subsection{Прадукты з~адмоўнай калярыйнасьцю.}
+Існуе міт пра прадукты з~адмоўнай калярыйнасьцю, нібыта на засваеньне якіх арганізм выдаткуе больш энэргіі, чым яны даюць. У~цэлым на засваеньне (тэрмічны эфэкт ежы) выдаткуецца ня больш за 5--10\,\%.
 
 \subsection{Заправіць салату.}
-Заправіць салату можна ня толькі калярыйнымі алеямі, але і выкарыстоўваць бальзамічны воцат, кефір, цытрынавы сок, здробненыя гарэхі і да т.п.
+Заправіць салату можна ня толькі калярыйнымі алеямі, але і выкарыстоўваць бальзамічны воцат, кефір, цытрынавы сок, здробненыя гарэхі і да т.~п.
 
 \subsection{Спартовае харчаваньне.}
-Спартхарч, па сутнасьці, можа быць аднесены да «бедных» калёрыяў, бо там шмат чыстых рэчываў, напрыклад бялку, але мала іншых важных злучэньняў. Калі вы не элітны атлет з ужываньнем неймавернай колькасьці энэргіі, вам спартовае харчаваньне ня трэба. Ежце цэльныя прадукты – так вы атрымаеце нашмат больш карысьці.
+Спартхарч, па сутнасьці, можа быць аднесены да «бедных» калёрыяў, бо там шмат чыстых рэчываў, напрыклад бялку, але мала іншых важных злучэньняў. Калі вы не элітны атлет з~ужываньнем неймавернай колькасьці энэргіі, вам спартовае харчаваньне ня трэба. Ежце цэльныя прадукты~--- так вы атрымаеце нашмат больш карысьці.
 
 \subsection{Багавіньне.}
 Багавіньне мае высокія канцэнтрацыі мінэралаў, нізкую колькасьць калёрыяў, яно карыснае для мікрафлёры і зручнае тым, што яго можна купляць празапас сушанае і выкарыстоўваць па меры неабходнасьці. Асноўныя віды: лямінарыі (комбу, келп), вакамэ, ірляндзкі мох, фукус, хідзікі і многія іншыя.
 
 \subsection{Ягады.}
-Ягады маюць высокую шчыльнасьць і багацьце біялягічна актыўных рэчываў. Магчымасьць замарозкі забясьпечвае іх даступнасьць у любую паравіну года. Выбірайце ягады мясцовыя, сакавітыя, у іх, як правіла, вышэйшая канцэнтрацыя антыаксыдантаў: чарніцы, ажыны, шаўкоўніца, вішня, чарнаплодная рабіна, буякі і многія іншыя. Кававы кубак ягадаў – неабходны мінімум.
+Ягады маюць высокую шчыльнасьць і багацьце біялягічна актыўных рэчываў. Магчымасьць замарозкі забясьпечвае іх даступнасьць у~любую паравіну года. Выбірайце ягады мясцовыя, сакавітыя, у~іх, як правіла, вышэйшая канцэнтрацыя антыаксыдантаў: чарніцы, ажыны, шаўкоўніца, вішня, чарнаплодная рабіна, буякі і многія іншыя. Кававы кубак ягадаў~--- неабходны мінімум.
 
 \subsection{Грыбы.}
-Розныя віды грыбоў прыкметна адрозьніваюцца па складзе, але ў цэлым усе маюць высокую біялягічную вартасьць. Грыбы станоўча ўплываюць на мікрафлёру кішачніка, утрымліваюць шэраг мінэралаў, паляпшаюць ліпідны спэктар крыві, зьмяншаюць запаленьне. Многія грыбы (кардцыцэпс, рэйшы і інш.) валодаюць унікальнымі здольнасьцямі ўплываць на імунны адказ.
+Розныя віды грыбоў прыкметна адрозьніваюцца па складзе, але ў~цэлым усе маюць высокую біялягічную вартасьць. Грыбы станоўча ўплываюць на мікрафлёру кішачніка, утрымліваюць шэраг мінэралаў, паляпшаюць ліпідны спэктар крыві, зьмяншаюць запаленьне. Многія грыбы (кардцыцэпс, рэйшы і інш.) валодаюць унікальнымі здольнасьцямі ўплываць на імунны адказ.
 
 \subsection{Гарэхі.}
-Гарэхі, нягледзячы на сваю калярыйнасьць, вельмі станоўча ўплываюць на здароўе, зьмяншаюць рызыку сардэчна-сасудзістых захворваньняў, памяншаюць узровень запаленьня. Можна сьмела іх есьці на дэсэрт, але пры гэтым таксама памятайце пра ўмеранасьць. Большасьць гарэхаў маюць даведзенае карыснае дзеяньне: грэцкі гарэх, мігдал, фісташкі, кеш'ю, бразільскі гарэх. Калі гарэхі пашкоджаныя ці здробненыя, іх якасьць падае – купляйце арэхі ня дробненыя, а з цэлай плёнкай ці шкарлупінай.
+Гарэхі, нягледзячы на сваю калярыйнасьць, вельмі станоўча ўплываюць на здароўе, зьмяншаюць рызыку сардэчна-сасудзістых захворваньняў, памяншаюць узровень запаленьня. Можна сьмела іх есьці на дэсэрт, але пры гэтым таксама памятайце пра ўмеранасьць. Большасьць гарэхаў маюць даведзенае карыснае дзеяньне: грэцкі гарэх, мігдал, фісташкі, кеш'ю, бразільскі гарэх. Калі гарэхі пашкоджаныя ці здробненыя, іх якасьць падае~--- купляйце арэхі ня дробненыя, а~з цэлай плёнкай ці шкарлупінай.
 
 \subsection{Спэцыі.}
-Спэцыі ўтрымоўваюць нікчэмна малую колькасьць калёрыяў, але пры гэтым неймаверна шмат карысных спалучэньняў. Яны зьмяншаюць запаленьне, паляпшаюць насычэньне і адчувальнасьць да інсуліну, стымулююць спаленьне тлушчу і валодаюць яшчэ цэлым шэрагам карысных эфэктаў. Выбірайце розныя спэцыі і дадавайце іх у ежу ў дастатковых колькасьцях: чырвоны перац, размарын, куркума, лаўровы ліст, аніс, кардамон, шафран і многія іншыя. Таксама дадавайце ў ежу і такія прадукты, як імберац, цыбуля, часнык, хрэн, гарчыца: яны ня толькі смачныя, але й вельмі карысныя.
+Спэцыі ўтрымоўваюць нікчэмна малую колькасьць калёрыяў, але пры гэтым неймаверна шмат карысных спалучэньняў. Яны зьмяншаюць запаленьне, паляпшаюць насычэньне і адчувальнасьць да інсуліну, стымулююць спаленьне тлушчу і валодаюць яшчэ цэлым шэрагам карысных эфэктаў. Выбірайце розныя спэцыі і дадавайце іх у~ежу ў~дастатковых колькасьцях: чырвоны перац, размарын, куркума, лаўровы ліст, аніс, кардамон, шафран і многія іншыя. Таксама дадавайце ў~ежу і такія прадукты, як імберац, цыбуля, часнык, хрэн, гарчыца: яны ня толькі смачныя, але й~вельмі карысныя.
 
 \subsection{Зеляніна.}
-Зеляніна даступная ня толькі ў сьвежым выглядзе, што ідэальна, але можа актыўна ўжывацца і ў сушаным і замарожаным выглядзе. Вы можаце на свой густ выкарыстоўваць шырокі набор: кроп, шпінат, базілік, кінза, пятрушка, лук, мангольд, кале і інш.
+Зеляніна даступная ня толькі ў~сьвежым выглядзе, што ідэальна, але можа актыўна ўжывацца і ў~сушаным і замарожаным выглядзе. Вы можаце на свой густ выкарыстоўваць шырокі набор: кроп, шпінат, базілік, кінза, пятрушка, лук, мангольд, кале і інш.
 
 \subsection{Мультывітаміны.}
-Лягічным рашэньнем зьнізіць рызыку дэфіцыту вітамінаў зьяўляецца прыём дабавак. Аднак дасьледаваньні паказваюць, што мультывітаміны не аказваюць прыкметнага станоўчага ўзьдзеяньня, а ў шматлікіх выпадках могуць толькі нашкодзіць. Таму важна выбіральна падыходзіць да прызначэньня розных дабавак, кантралюючы ўзровень дэфіцыту вітамінаў лябараторнымі аналізамі.
+Лягічным рашэньнем зьнізіць рызыку дэфіцыту вітамінаў зьяўляецца прыём дабавак. Аднак дасьледаваньні паказваюць, што мультывітаміны не аказваюць прыкметнага станоўчага ўзьдзеяньня, а~ў шматлікіх выпадках могуць толькі нашкодзіць. Таму важна выбіральна падыходзіць да прызначэньня розных дабавак, кантралюючы ўзровень дэфіцыту вітамінаў лябараторнымі аналізамі.
 
-Спэцыі ўтрымоўваюць нікчэмна малую колькасьць калёрыяў, пры гэтым неймаверна шмат карысных спалучэньняў. Дадавайце ў ежу чырвоны перац, размарын, куркуму, ляўровы ліст, аніс, кардамон, шафран.
+\tipbox{Спэцыі ўтрымоўваюць нікчэмна малую колькасьць калёрыяў, пры гэтым неймаверна шмат карысных спалучэньняў. Дадавайце ў~ежу чырвоны перац, размарын, куркуму, ляўровы ліст, аніс, кардамон, шафран.}
 
 \subsection{Найбольш частыя дэфіцыты.}
-Найбольш частымі дэфіцытамі зьяўляюцца дэфіцыт амэга-3 тлустых кіслот (дадаткі або тлустая марская рыба два разы на тыдзень, кантроль па амэга-індэксе), дэфіцыт сэлену (лепш хелатные формы дабавак або морапрадукты, часнык, бразільскі гарэх), дэфіцыт вітаміну D (бываць часьцей апоўдні на сонцы, есьці больш рыбы, яек або дабаўкі ў высокіх дозах пад лябараторным кантролем), дэфіцыт жалеза (мясныя прадукты або хелатные дабаўкі, кантроль па профілі жалеза ў крыві: жалеза, ферытын, трансфэрын), дэфіцыт цынку (больш мяса і рыбы або дабаўкі), дэфіцыт магнію, дэфіцыт вітамінаў В9 і В12 (лепш прымаць у выглядзе мэтыльных формаў, мэтылфалат і мэтылкабаламін, кантроль па ўзроўні В9, В12, гомацыстэіну), дэфіцыт ёду (цяпер сустракаецца ўсё радзей).
+Найбольш частымі дэфіцытамі зьяўляюцца дэфіцыт амэга-3 тлустых кіслот (дадаткі або тлустая марская рыба два разы на тыдзень, кантроль па амэга-індэксе), дэфіцыт сэлену (лепш хелатные формы дабавак або морапрадукты, часнык, бразільскі гарэх), дэфіцыт вітаміну D (бываць часьцей апоўдні на сонцы, есьці больш рыбы, яек або дабаўкі ў~высокіх дозах пад лябараторным кантролем), дэфіцыт жалеза (мясныя прадукты або хелатные дабаўкі, кантроль па профілі жалеза ў~крыві: жалеза, ферытын, трансфэрын), дэфіцыт цынку (больш мяса і рыбы або дабаўкі), дэфіцыт магнію, дэфіцыт вітамінаў В9 і В12 (лепш прымаць у~выглядзе мэтыльных формаў, мэтылфалат і мэтылкабаламін, кантроль па ўзроўні В9, В12, гомацыстэіну), дэфіцыт ёду (цяпер сустракаецца ўсё радзей).
+
